--- a/잉/4월25일-4월29일.md
+++ b/잉/4월25일-4월29일.md
@@ -19,8 +19,8 @@
 - [x] 운동 1시간 
 
 ### 4월 29일 (금)
-- [ ] 강의
-- [ ] 포수타. 14:00~15:00
-- [ ] 학습로그 온보딩. 15:00~16:00
-- [ ] 네트워크 스터디. 16:00~17:30?
-- [ ] 저녁약속.  18:30~  
+- [x] 강의
+- [x] 포수타. 14:00~15:00
+- [x] 학습로그 온보딩. 15:00~16:00
+- [x] 네트워크 스터디. 16:00~17:30?
+- [x] 저녁약속.  18:30~  
