[티거] 5월 2일 완료

--- a/티거/5월2일-5월8일.md
+++ b/티거/5월2일-5월8일.md
@@ -2,7 +2,7 @@
 
 ## 5월 2일 (월)
 
-- [ ] 페이먼츠 1단계 리뷰 피드백
-- [ ] LMS < 페이먼츠 - Component-Driven Development > 자료 읽기
-  - [ ] Controlled & Uncontrolled Components
-  - [ ] Context API
+- [x] 페이먼츠 1단계 리뷰 피드백
+- [x] LMS < 페이먼츠 - Component-Driven Development > 자료 읽기
+  - [x] Controlled & Uncontrolled Components
+  - [x] Context API
