--- a/파랑/5월2일~5월8일.md
+++ b/파랑/5월2일~5월8일.md
@@ -4,3 +4,7 @@
 ---
 하 드디어 웹 체스가 끝이 났다ㅠㅠ. 거의 한 달간 잡고 있던 체스.. 이제 보지 말자👋
 내일은 또 새로운 미션이 시작되는데 이번 미션은 또 어떨지, 페어는 누굴지 걱정 반 기대 반이다ㅎㅎ. 오늘은 일찍 자야지.
+
+### 5월 3일 (화)
+- [ ] 지하철 미션 페어 시작
+- [ ] 체스 피드백 강의 다시 보기
