--- a/잉/5월02일-5월06일.md
+++ b/잉/5월02일-5월06일.md
@@ -1,3 +1,8 @@
 ### 5월 02일 (월)
 - [x] 웹 체스 2단계 리팩토링
 - [x] 네트워크책 읽기 (62~75)
+
+### 5월 03일 (화)
+- [] 지하철 노선도 페어링.
+- [] 체스 피드백 반영 및 pr 날리기.
+- [] 운동1시간.  
