[티거] 5월 3일 계획

--- a/티거/5월2일-5월8일.md
+++ b/티거/5월2일-5월8일.md
@@ -6,3 +6,9 @@
 - [x] LMS < 페이먼츠 - Component-Driven Development > 자료 읽기
   - [x] Controlled & Uncontrolled Components
   - [x] Context API
+
+## 5월 3일 (화)
+
+- [ ] 10시 30분 강의 < Context API >
+- [ ] 페이먼츠 1단계 보완
+- [ ] 리액트 Hooks 학습
