--- a/민초/5월2일-5월8일.md
+++ b/민초/5월2일-5월8일.md
@@ -4,6 +4,6 @@
 
 # 5.3.
 
-- [ ] 페이먼츠 step1 피드백 반영
-- [ ] 개발자를 위한 친절한 UI 컴포넌트 라이브러리 만들기 영상 보기
+- [x] 페이먼츠 step1 피드백 반영
+- [x] 개발자를 위한 친절한 UI 컴포넌트 라이브러리 만들기 영상 보기
 
