220503 앨버 계획 완료

--- a/앨버/5월2일-5월6일.md
+++ b/앨버/5월2일-5월6일.md
@@ -5,7 +5,7 @@
 
 ## 5월 3일
 
-- [ ] 코드 리뷰 다른 크루들 것 분석
-- [ ] 테코톡 준비
-- [ ] 책 읽기
-- [ ] 레벨2 시작하는 회고 작성
+- [x] 코드 리뷰 다른 크루들 것 분석
+- [x] 테코톡 준비
+- [x] 책 읽기
+- [x] 레벨2 시작하는 회고 작성
