[티거] 5월 3일 완료

--- a/티거/5월2일-5월8일.md
+++ b/티거/5월2일-5월8일.md
@@ -9,6 +9,6 @@
 
 ## 5월 3일 (화)
 
-- [ ] 10시 30분 강의 < Context API >
-- [ ] 페이먼츠 1단계 보완
-- [ ] 리액트 Hooks 학습
+- [x] 10시 30분 강의 < Context API >
+- [x] 페이먼츠 1단계 보완
+- [x] 리액트 Hooks 학습
