220504 잉 일정 완료

--- a/잉/5월02일-5월06일.md
+++ b/잉/5월02일-5월06일.md
@@ -3,6 +3,6 @@
 - [x] 네트워크책 읽기 (62~75)
 
 ### 5월 03일 (화)
-- [] 지하철 노선도 페어링.
-- [] 체스 피드백 반영 및 pr 날리기.
-- [] 운동1시간.  
+- [x] 지하철 노선도 페어링.
+- [x] 체스 피드백 반영 및 pr 날리기.
+- [x] 운동1시간.  
