--- a/민초/5월2일-5월8일.md
+++ b/민초/5월2일-5월8일.md
@@ -7,3 +7,8 @@
 - [x] 페이먼츠 step1 피드백 반영
 - [x] 개발자를 위한 친절한 UI 컴포넌트 라이브러리 만들기 영상 보기
 
+# 5.4.
+
+- [ ] React Hooks 공부
+- [ ] 실무에서 바로 쓰는 Frontend Clean Code 영상보기
+- [ ] Step2 미션 구상해보기
