--- a/앨버/5월2일-5월6일.md
+++ b/앨버/5월2일-5월6일.md
@@ -9,3 +9,14 @@
 - [x] 테코톡 준비
 - [x] 책 읽기
 - [x] 레벨2 시작하는 회고 작성
+
+## 5월 4일
+
+- [ ] react-payments 1단계 구현 못한 거 구현하기
+ - [ ] 카드 색깔 고르는 모달
+- [ ] 미션하다가 공부한 내용 정리하기 (문서로)
+ - [ ] nativeEvent
+ - [ ] cursor 움직임
+- [ ] 리액트 책 읽기 (1시간)
+- [ ] 테코톡 준비하기 (1시간)
+- [ ] 10시 하교
