--- a/잉/5월02일-5월06일.md
+++ b/잉/5월02일-5월06일.md
@@ -5,4 +5,7 @@
 ### 5월 03일 (화)
 - [x] 지하철 노선도 페어링.
 - [x] 체스 피드백 반영 및 pr 날리기.
-- [x] 운동1시간.  
+- [x] 운동1시간. 
+
+### 5월 03일 (화)
+- [ ] 지하철 노선도 페어링 열심히 잠실.
