--- a/파랑/5월2일~5월8일.md
+++ b/파랑/5월2일~5월8일.md
@@ -12,5 +12,8 @@
 갑자기 집에 가라뇨????? 온라인 좋은데 안 좋아😱
 
 ### 5월 4일 (수)
-- [ ] 지하철 2단계 후 PR 날리기
-- [ ] 닥터스트레인지🧙‍
+- [x] 지하철 2단계 후 PR 날리기
+- [x] 닥터스트레인지🧙‍
+---
+지하철 미션을 어린이 날에도 해야할까봐 걱정했는데 일찍 끝나서 기분이 좋다!
+오늘은 저녁에 영화보고 내일은 미뤄뒀던 스프링 공부를 해야겠다. 근데 하기 싫다.
