--- a/민초/5월2일-5월8일.md
+++ b/민초/5월2일-5월8일.md
@@ -9,6 +9,6 @@
 
 # 5.4.
 
-- [ ] React Hooks 공부
-- [ ] 실무에서 바로 쓰는 Frontend Clean Code 영상보기
-- [ ] Step2 미션 구상해보기
+- [x] React Hooks 공부
+- [x] 실무에서 바로 쓰는 Frontend Clean Code 영상보기
+- [x] Step2 미션 구상해보기
