220504 앨버 계획 완료

--- a/앨버/5월2일-5월6일.md
+++ b/앨버/5월2일-5월6일.md
@@ -12,11 +12,11 @@
 
 ## 5월 4일
 
-- [ ] react-payments 1단계 구현 못한 거 구현하기
-  - [ ] 카드 색깔 고르는 모달
-- [ ] 미션하다가 공부한 내용 정리하기 (문서로)
-  - [ ] nativeEvent
-  - [ ] cursor 움직임
-- [ ] 리액트 책 읽기 (1시간)
-- [ ] 테코톡 준비하기 (1시간)
-- [ ] 10시 하교
+- [x] react-payments 1단계 구현 못한 거 구현하기
+  - [x] 카드 색깔 고르는 모달
+- [x] 미션하다가 공부한 내용 정리하기 (문서로)
+  - [x] nativeEvent
+  - [x] cursor 움직임
+- [x] 리액트 책 읽기 (1시간)
+- [x] 테코톡 준비하기 (1시간)
+- [x] 10시 하교
