feat: 코린 5월4일 계획 완료

--- a/코린/5월2일-5월8일.md
+++ b/코린/5월2일-5월8일.md
@@ -11,6 +11,6 @@
 
 ## 5월4일
 
-- [ ] 지하철 노선도 PR 날리기
-- [ ] 알고리즘 스터디
-- [ ] http 책 5장 쪼금 읽기
+- [x] 지하철 노선도 PR 날리기
+- [x] 알고리즘 스터디
+- [x] http 책 5장 쪼금 읽기
