[티거] 5월 4일 완료

--- a/티거/5월2일-5월8일.md
+++ b/티거/5월2일-5월8일.md
@@ -15,6 +15,8 @@
 
 ## 5월 4일 (수)
 
-- [ ] 페이먼츠 2단계
-  - [ ] 구현할 기능 목록 정리
-- [ ] 리액트 Context API 학습
+- [x] 페이먼츠 2단계
+  - [x] 구현할 기능 목록 정리
+- [x] 리액트 학습
+  - [x] Hooks (useRef, useReducer)
+  - [x] Context API
