--- a/티거/5월2일-5월8일.md
+++ b/티거/5월2일-5월8일.md
@@ -12,3 +12,11 @@
 - [x] 10시 30분 강의 < Context API >
 - [x] 페이먼츠 1단계 보완
 - [x] 리액트 Hooks 학습
+
+## 5월 4일 (수)
+
+- [x] 페이먼츠 2단계
+  - [x] 구현할 기능 목록 정리
+- [x] 리액트 학습
+  - [x] Hooks (useRef, useReducer)
+  - [x] Context API
