[티거] 5월 6일 계획

--- a/티거/5월2일-5월8일.md
+++ b/티거/5월2일-5월8일.md
@@ -20,3 +20,8 @@
 - [x] 리액트 학습
   - [x] Hooks (useRef, useReducer)
   - [x] Context API
+
+## 5월 6일 (금)
+
+- [ ] 10시 30분 강의 < React 회고 & 상호 피드백 >
+- [ ] 페이먼츠 2단계
