--- a/잉/5월02일-5월06일.md
+++ b/잉/5월02일-5월06일.md
@@ -7,5 +7,11 @@
 - [x] 체스 피드백 반영 및 pr 날리기.
 - [x] 운동1시간. 
 
-### 5월 03일 (화)
+### 5월 04일 (수)
 - [x] 지하철 노선도 페어링 열심히 잠실.
+
+### 5월 06일 (금)
+- [ ] 운동 1시간   
+- [ ] 네트워크 스터디 
+- [ ] 네트워크책 5장 읽기 
+- [ ] 지하철 노선도 피드백 반영 (안오면 안해요)
