--- a/에덴/5월2일-5월8일.md
+++ b/에덴/5월2일-5월8일.md
@@ -8,7 +8,12 @@
 - [x] http 스터디
 - [x] 페어 프로그래밍
 
-## 5월 3일
+## 5월 4일
 
 - [x] 지하철 PR 날리기
 - [x] http 독서
+
+## 5월 6일
+
+- [ ] 피드백 반영하기 
+- [ ] http 스터디
