feat: 코린 5월6일 계획 추가

--- a/코린/5월2일-5월8일.md
+++ b/코린/5월2일-5월8일.md
@@ -14,3 +14,9 @@
 - [x] 지하철 노선도 PR 날리기
 - [x] 알고리즘 스터디
 - [x] http 책 5장 쪼금 읽기
+
+## 5월6일
+
+- [ ] 지하철 노선도 리뷰 오면 반영하기
+- [ ] 체스 피드백 정리
+- [ ] http 스터디
