[파랑] 5월6일 계획

--- a/파랑/5월2일~5월8일.md
+++ b/파랑/5월2일~5월8일.md
@@ -17,3 +17,7 @@
 ---
 지하철 미션을 어린이 날에도 해야할까봐 걱정했는데 일찍 끝나서 기분이 좋다!
 오늘은 저녁에 영화보고 내일은 미뤄뒀던 스프링 공부를 해야겠다. 근데 하기 싫다.
+
+### 5월 6일 (금)
+- [ ] 지하철 3단계 시작
+- [ ] 스프링 어노테이션 정리
