--- a/민초/5월2일-5월8일.md
+++ b/민초/5월2일-5월8일.md
@@ -12,3 +12,9 @@
 - [x] React Hooks 공부
 - [x] 실무에서 바로 쓰는 Frontend Clean Code 영상보기
 - [x] Step2 미션 구상해보기
+
+# 5.6.
+
+- [ ] 페이먼츠 미션 Step2
+- [ ] Context API 공부
+- [ ] Custom Hook 공부
