--- a/앨버/5월2일-5월6일.md
+++ b/앨버/5월2일-5월6일.md
@@ -24,13 +24,13 @@
 
 ## 5월 6일
 
-- [ ] react-payments 2단계 진행하기(context api와 validation은 아래 사항 완료하면 작업)
- - [ ] modal 컴포넌트 리팩토링 (공통화하지 않기)
- - [ ] storybook 상호작용 테스트 (addon 공부하기)
- - [ ] react-router-dom 공부
- - [ ] 카드 추가완료 페이지 제작 
- - [ ] 카드 목록 페이지 제작
+- [x] react-payments 2단계 진행하기(context api와 validation은 아래 사항 완료하면 작업)
+ - [x] modal 컴포넌트 리팩토링 (공통화하지 않기)
+ - [x] storybook 상호작용 테스트 (addon 공부하기)
+ - [x] react-router-dom 공부
+ - [x] 카드 추가완료 페이지 제작 
+ - [x] 카드 목록 페이지 제작
 
-- [ ] 코드 리뷰 스터디
-- [ ] 밥 빠르게 먹고 오기~
-- [ ] 10시 하교
+- [x] 코드 리뷰 스터디
+- [x] 밥 빠르게 먹고 오기~
+- [x] 10시 하교
