--- a/민초/5월2일-5월8일.md
+++ b/민초/5월2일-5월8일.md
@@ -15,6 +15,6 @@
 
 # 5.6.
 
-- [ ] 페이먼츠 미션 Step2
-- [ ] Context API 공부
-- [ ] Custom Hook 공부
+- [x] 페이먼츠 미션 Step2
+- [x] Context API 공부
+- [x] Custom Hook 공부
