220506 잉 일정 완료

--- a/잉/5월02일-5월06일.md
+++ b/잉/5월02일-5월06일.md
@@ -11,7 +11,7 @@
 - [x] 지하철 노선도 페어링 열심히 잠실.
 
 ### 5월 06일 (금)
-- [ ] 운동 1시간   
-- [ ] 네트워크 스터디 
-- [ ] 네트워크책 5장 읽기 
-- [ ] 지하철 노선도 피드백 반영 (안오면 안해요)
+- [x] 운동 1시간   
+- [x] 네트워크 스터디 
+- [x] 네트워크책 5장 읽기 
+- [x] 지하철 노선도 피드백 반영 (안오면 안해요)
