[파랑] 5월6일 계획완료

--- a/파랑/5월2일~5월8일.md
+++ b/파랑/5월2일~5월8일.md
@@ -19,5 +19,10 @@
 오늘은 저녁에 영화보고 내일은 미뤄뒀던 스프링 공부를 해야겠다. 근데 하기 싫다.
 
 ### 5월 6일 (금)
-- [ ] 지하철 3단계 시작
-- [ ] 스프링 어노테이션 정리
+- [x] 지하철 3단계 시작
+- [x] 스프링 어노테이션 정리
+---
+오리, 라라, 동석쓰, 쬬그린과 모각코를 했다. 설입까지 오프 모각코하러 나와놓고 4시간은 게더에 있었다. 앞에서 오리가 그럴거면 집에서 게더하지 그랬냐고 했다. 반박이 불가능했다. 저녁 먹기 전까진 코드 한 줄도 못 썼다;;
+이대로 집에 가긴 아쉬워서 오리랑 쬬그린을 졸라서 저녁 먹고도 밤 10시까지 모각코했다. 스프링 모르는 게 많았는데 개고수 오리가 옆에 있으니까 이것저것 바로바로 물어볼 수 있어서 너무 꿀이었다.
+그러고 집가려다 쬬그린이 길에서 줍줍한 5000원으로 코인노래방에 가서 노래까지 부르고 막차타고 집에 왔다. 집 와서도 새벽 3시 30분까지 게더에서 또 구구조 크루들이랑 모각코함.
+찐으로 알찬 하루였다.. GOOD.
