220509 앨버 계획 완료

--- a/앨버/5월9일~5월13일.md
+++ b/앨버/5월9일~5월13일.md
@@ -1,7 +1,7 @@
 ## 5월 9일
 
-- [ ] step2 PR (18시 이내에)
-- [ ] payments 회고 작성
-- [ ] 학습로그 근로
-- [ ] 테코톡 준비 (1시간)
-- [ ] step2 리팩토링 (~18시까지)
+- [x] step2 PR (18시 이내에)
+- [x] payments 회고 작성
+- [x] 학습로그 근로
+- [x] 테코톡 준비 (1시간)
+- [x] step2 리팩토링 (~18시까지)
