--- a/잉/5월09일~5월13일.md
+++ b/잉/5월09일~5월13일.md
@@ -1,4 +1,4 @@
 ### 5월 09일 (월)
-- [ ] 지하철 2단계 일부 진행. 
-- [ ] 네트워크 발표자료 만들기. 
-- [ ] 운동 1시간.
+- [x] 지하철 2단계 일부 진행. 
+- [x] 네트워크 발표자료 만들기. 
+- [x] 운동 1시간.
