--- a/오리/5월9일~5월15일.md
+++ b/오리/5월9일~5월15일.md
@@ -1,3 +1,12 @@
 ### 5월 3일(월)
 - [x] 알고리즘 2문제
 - [x] 강의 들었던거 리마인드 겸 정리
+
+### 5월 4일(화)
+- [x] 요가 1시간
+- [ ] 알고리즘 2문제
+- [ ] 오전 강의 + 말하기
+
+- [ ] 오후 강의 들었던거 리마인드 겸 정리 (~8:00)
+- [ ] ~섹션 7 (~10:00)
+- [ ] 리뷰 오면 반영
