--- a/잉/5월09일~5월13일.md
+++ b/잉/5월09일~5월13일.md
@@ -2,3 +2,10 @@
 - [x] 지하철 2단계 일부 진행. 
 - [x] 네트워크 발표자료 만들기. 
 - [x] 운동 1시간.
+
+### 5월 10일 (화)
+- [ ] 오전 강의.
+- [ ] 지하철 노선도 3단계 기능 구현 하기.
+- [ ] 네트워크 스터디.
+- [ ] 운동 1시간.
+
