[파랑] 5월10일 계획

--- a/파랑/5월9일~5월15일.md
+++ b/파랑/5월9일~5월15일.md
@@ -8,3 +8,7 @@
 그래도 오늘 기분은 좋다. 뽕나무족발이 그렇게 맛있대서 가보고 싶었는데 드디어 오늘 구구조랑 가봤다! 괜히 맛집이 아니었다. JMT.. 저녁 먹고 오리랑 제로랑 노래방도 가고 ^^..
 무엇보다 라라랑 아스피가 방금 나랑 버스를 10분이나 같이 기다려줘서 너무 기분이 좋았다. 별 거 아닐 수도 있지만 본인들도 피곤할텐데 같이 있어줘서 고마웠다. 기다리면서 수다 떨다 보니 버스 기다리는 시간이 엄청 빠르게 지나갔다.
 흑흑 이래서 몸은 힘들지만 행복하다니까.. 내일도 파이팅해서 얼른 지하철 미션 끝내보자..👊
+
+### 5월 10일 (화)
+- [ ] 지하철 3단계 증말 열심히 하기
+- [ ] 22시 필라테스
