오리 요구사항 반영

--- a/아서/5월 9일 ~5월 15일.md
+++ b/아서/5월 9일 ~5월 15일.md
@@ -6,7 +6,7 @@
 
 ## 5월 10일
 
-- [ ] 지하철 노선도 3단계 기능 구현하기
+- [ ] 지하철 노선도 3단계 기능 구현하기 및 PR 보내기
   - [ ] 새로운 구간을 추가하는 기능
   - [ ] 구간을 삭제하는 기능
 - [ ] 위클리 회고 작성하기
