수업 일정 추가

--- a/에덴/5월9일-5월15일.md
+++ b/에덴/5월9일-5월15일.md
@@ -5,6 +5,7 @@
 
 ## 5월 10일
 
-- [ ] 피드백 적용!
-- [ ] 3단계 도메인, 서비스, 컨트롤러까지 만들기
+- [ ] 오전 수업 및 학습 로그 말하기
 - [ ] http 스터디
+- [ ] 1-2단계 피드백 적용
+- [ ] 3단계 도메인, 서비스, 컨트롤러까지 만들기
