[파랑] 5월10일 계획수정

--- a/파랑/5월9일~5월15일.md
+++ b/파랑/5월9일~5월15일.md
@@ -10,5 +10,5 @@
 흑흑 이래서 몸은 힘들지만 행복하다니까.. 내일도 파이팅해서 얼른 지하철 미션 끝내보자..👊
 
 ### 5월 10일 (화)
-- [ ] 지하철 3단계 증말 열심히 하기
+- [ ] 지하철 3단계 구간 저장 기능 구현하기
 - [ ] 22시 필라테스
