220510 잉 일정 수정

--- a/잉/5월09일~5월13일.md
+++ b/잉/5월09일~5월13일.md
@@ -6,6 +6,8 @@
 ### 5월 10일 (화)
 - [ ] 오전 강의.
 - [ ] 지하철 노선도 3단계 기능 구현 하기.
+  -[ ] req, res에 구간 기능 추가
+  -[ ] 구간 등록, 구간 삭제 기능 구현(예외처리는 안한다.)
 - [ ] 네트워크 스터디.
 - [ ] 운동 1시간.
 
