[아서] 5월 10일 계획 (#350)
* [아서] 5월 10일 계획

* 오리 요구사항 반영

* [아서] 5월 10일 끝

--- a/아서/5월 9일 ~5월 15일.md
+++ b/아서/5월 9일 ~5월 15일.md
@@ -1,3 +1,12 @@
 ## 5월 9일
 
 - [x] 코로나 이슈로 휴식
+
+
+
+## 5월 10일
+
+- [x] 지하철 노선도 3단계 기능 구현하기 및 PR 보내기
+  - [x] 새로운 구간을 추가하는 기능
+  - [x] 구간을 삭제하는 기능
+- [x] 위클리 회고 작성하기
