--- a/민초/5월9일-5월15일.md
+++ b/민초/5월9일-5월15일.md
@@ -5,7 +5,7 @@
 
 # 5.10.
 
-- [ ] FE 수업
-- [ ] 장바구니 페어 프로그래밍
-- [ ] 시간 남으면 페이먼츠 피드백 반영
+- [x] FE 수업
+- [x] 장바구니 페어 프로그래밍
+- [x] 시간 남으면 페이먼츠 피드백 반영
 
