--- a/코린/5월9일-5월15일.md
+++ b/코린/5월9일-5월15일.md
@@ -1,5 +1,10 @@
 ## 5월9일
 
-- [ ] 지하철 Service 테스트 추가
-- [ ] http 책 5장 읽기
-- [ ] http 발표 준비
+- [x] 지하철 Service 테스트 추가
+- [x] http 책 5장 읽기
+- [x] http 발표 준비
+
+## 5월10일
+
+- [x] 지하철 3단계 전체 도메인 로직 완성시키기
+- [x] http 스터디
