220510 앨버 계획 완료

--- a/앨버/5월9일~5월13일.md
+++ b/앨버/5월9일~5월13일.md
@@ -9,6 +9,6 @@
 
 ## 5월 10일
 
-- [ ] 장바구니 step1 페어 프로그래밍 시작 (14:00 ~ 21:00 or 22:00)
-- [ ] 페이먼츠 리팩토링 (~10:00)
-- [ ] 리액트 관련 문서 읽기
+- [x] 장바구니 step1 페어 프로그래밍 시작 (14:00 ~ 21:00 or 22:00)
+- [x] 페이먼츠 리팩토링 (~10:00)
+- [x] 리액트 관련 문서 읽기
