--- a/앨버/5월9일~5월13일.md
+++ b/앨버/5월9일~5월13일.md
@@ -5,3 +5,10 @@
 - [x] 학습로그 근로
 - [x] 테코톡 준비 (1시간)
 - [x] step2 리팩토링 (~18시까지)
+
+
+## 5월 10일
+
+- [x] 장바구니 step1 페어 프로그래밍 시작 (14:00 ~ 21:00 or 22:00)
+- [x] 페이먼츠 리팩토링 (~10:00)
+- [x] 리액트 관련 문서 읽기
