[잉] 5월 10일 계획 (#353)
* 220510 잉 일정

* 220510 잉 일정 수정

* 220510 잉 일정 완료

--- a/잉/5월09일~5월13일.md
+++ b/잉/5월09일~5월13일.md
@@ -2,3 +2,12 @@
 - [x] 지하철 2단계 일부 진행. 
 - [x] 네트워크 발표자료 만들기. 
 - [x] 운동 1시간.
+
+### 5월 10일 (화)
+- [x] 오전 강의.
+- [x] 지하철 노선도 3단계 기능 구현 하기.
+  -[x] req, res에 구간 기능 추가
+  -[x] 구간 등록, 구간 삭제 기능 구현(예외처리는 안한다.)
+- [x] 네트워크 스터디.
+- [x] 운동 1시간.
+
