[파랑] 5월10일 계획 (#354)
* [파랑] 5월10일 계획

* [파랑] 5월10일 계획수정

* [파랑] 5월10일 계획완료

--- a/파랑/5월9일~5월15일.md
+++ b/파랑/5월9일~5월15일.md
@@ -8,3 +8,11 @@
 그래도 오늘 기분은 좋다. 뽕나무족발이 그렇게 맛있대서 가보고 싶었는데 드디어 오늘 구구조랑 가봤다! 괜히 맛집이 아니었다. JMT.. 저녁 먹고 오리랑 제로랑 노래방도 가고 ^^..
 무엇보다 라라랑 아스피가 방금 나랑 버스를 10분이나 같이 기다려줘서 너무 기분이 좋았다. 별 거 아닐 수도 있지만 본인들도 피곤할텐데 같이 있어줘서 고마웠다. 기다리면서 수다 떨다 보니 버스 기다리는 시간이 엄청 빠르게 지나갔다.
 흑흑 이래서 몸은 힘들지만 행복하다니까.. 내일도 파이팅해서 얼른 지하철 미션 끝내보자..👊
+
+### 5월 10일 (화)
+- [x] 지하철 3단계 구간 저장 기능 구현하기
+- [x] 22시 필라테스
+---
+어제 새벽 5시 30분 넘어서 자는 바람에 오늘 너무 피곤했다. 코딩하면서 졸았던 적이 없었는데 처음으로 하다가 졸았다..
+도저히 안 되겠어서 칼퇴하고 집와서 1시간 30분 정도 잤는데 계획에 구간 저장 기능 구현하기를 써버려서 지금까지 못 자고 기능을 구현했다^^ㅠ.
+그래도 오리가 중간에 와서 거의 1대1 코치를 해줘서 빠르게 끝낼 수 있었다^-^. 내일은 온라인으로 해야겠다. 휴식이 필요해..
