--- a/앨버/5월9일~5월13일.md
+++ b/앨버/5월9일~5월13일.md
@@ -12,3 +12,9 @@
 - [x] 장바구니 step1 페어 프로그래밍 시작 (14:00 ~ 21:00 or 22:00)
 - [x] 페이먼츠 리팩토링 (~10:00)
 - [x] 리액트 관련 문서 읽기
+
+## 5월 11일
+
+- [ ] 장바구니 step1 페어 프로그래밍 (10:00 ~ 22:00)
+- [ ] 리액트, 리덕스 공부 (react, redux, react-redux, redux-saga)
+- [ ] 어제 작성한 코드 놓친 부분 공부하기
