--- a/아서/5월 9일 ~5월 15일.md
+++ b/아서/5월 9일 ~5월 15일.md
@@ -10,3 +10,14 @@
   - [x] 새로운 구간을 추가하는 기능
   - [x] 구간을 삭제하는 기능
 - [x] 위클리 회고 작성하기
+
+
+
+## 5월 11일
+
+- [ ] 휴식
+  - [ ] 영화 한편 보기
+  - [ ] 햇빛 쬐기
+- [ ] 미션 피드백 반영
+  - [ ] 프론트 페이지에서 구간이 보여지도록 수정
+- [ ] 스프링 DB 강의 3개 듣기
