--- a/오리/5월9일~5월15일.md
+++ b/오리/5월9일~5월15일.md
@@ -4,9 +4,15 @@
 
 ### 5월 4일(화)
 - [x] 요가 1시간
-- [ ] 알고리즘 2문제
-- [ ] 오전 강의 + 말하기
+- [x] 알고리즘 2문제
+- [x] 오전 강의 + 말하기
 
-- [ ] 오후 강의 들었던거 리마인드 겸 정리 (~8:00)
-- [ ] ~섹션 7 (~10:00)
-- [ ] 리뷰 오면 반영
+- [x] 오후 강의 들었던거 리마인드 겸 정리 (~8:00)
+- [x] ~섹션 7 (~10:00)
+- [x] 리뷰 오면 반영
+
+### 5월 11일(수)
+- [ ] 알고리즘 2문제
+- [ ] Spring Database Truncate cleaner 만들어보기
+- [ ] 피드백 오면 반영
+- [ ] ~ 섹션 8 반틈
