[아서] 5월 11일 완료

--- a/아서/5월 9일 ~5월 15일.md
+++ b/아서/5월 9일 ~5월 15일.md
@@ -15,9 +15,9 @@
 
 ## 5월 11일
 
-- [ ] 휴식
-  - [ ] 영화 한편 보기
-  - [ ] 햇빛 쬐기
-- [ ] 미션 피드백 반영
-  - [ ] 프론트 페이지에서 구간이 보여지도록 수정
-- [ ] 스프링 DB 강의 3개 듣기
+- [x] 휴식
+  - [x] 영화 한편 보기
+  - [x] 햇빛 쬐기
+- [x] 미션 피드백 반영
+  - [x] 프론트 페이지에서 구간이 보여지도록 수정
+- [x] 스프링 DB 강의 3개 듣기
