--- a/민초/5월9일-5월15일.md
+++ b/민초/5월9일-5월15일.md
@@ -11,6 +11,6 @@
 
 # 5.11.
 
-- [ ] 장바구니 페어 프로그래밍
-- [ ] Redux 사용법 익히기
-- [ ] Emotion 사용법 익히기
+- [x] 장바구니 페어 프로그래밍
+- [x] Redux 사용법 익히기
+- [x] Emotion 사용법 익히기
