220511 앨버 계획완료

--- a/앨버/5월9일~5월13일.md
+++ b/앨버/5월9일~5월13일.md
@@ -15,6 +15,6 @@
 
 ## 5월 11일
 
-- [ ] 장바구니 step1 페어 프로그래밍 (10:00 ~ 22:00)
-- [ ] 리액트, 리덕스 공부 (react, redux, react-redux, redux-saga)
-- [ ] 어제 작성한 코드 놓친 부분 공부하기
+- [x] 장바구니 step1 페어 프로그래밍 (10:00 ~ 22:00)
+- [x] 리액트, 리덕스 공부 (react, redux, react-redux, redux-saga)
+- [x] 어제 작성한 코드 놓친 부분 공부하기
