5월 11일 에덴 계획 완료

--- a/에덴/5월9일-5월15일.md
+++ b/에덴/5월9일-5월15일.md
@@ -12,8 +12,8 @@
 
 ## 5월 11일
 
-- [ ] 아침 안먹었으니까 점심 맛있게 먹기
-- [ ] algorithm 스터디
-- [ ] 3단계 
-  - [ ] 인수 테스트 작성하기
-  - [ ] 검증 로직 더 꼼꼼히 보기
+- [x] 아침 안먹었으니까 점심 맛있게 먹기
+- [x] algorithm 스터디
+- [x] 3단계 
+  - [x] 인수 테스트 작성하기
+  - [x] 검증 로직 더 꼼꼼히 보기
