--- a/에덴/5월9일-5월15일.md
+++ b/에덴/5월9일-5월15일.md
@@ -9,3 +9,11 @@
 - [x] http 스터디
 - [x] 1-2단계 피드백 적용
 - [x] 3단계 도메인, 서비스, 컨트롤러까지 만들기
+
+## 5월 11일
+
+- [x] 아침 안먹었으니까 점심 맛있게 먹기
+- [x] algorithm 스터디
+- [x] 3단계 
+  - [x] 인수 테스트 작성하기
+  - [x] 검증 로직 더 꼼꼼히 보기
