220511 잉 일정 완료

--- a/잉/5월09일~5월13일.md
+++ b/잉/5월09일~5월13일.md
@@ -12,6 +12,6 @@
 - [x] 운동 1시간.
 
 ### 5월 11일 (수)
-- [ ] 지하철 노선도 구간 등록, 삭제 예외처리 
-- [ ] 지하철 노선도 구간 등록, 삭제 api 만들기 
-- [ ] 네트워크 책 6장 15p 읽기
+- [x] 지하철 노선도 구간 등록, 삭제 예외처리 
+- [x] 지하철 노선도 구간 등록, 삭제 api 만들기 
+- [x] 네트워크 책 6장 15p 읽기
