[오리] 5월 11일 계획 완료

--- a/오리/5월9일~5월15일.md
+++ b/오리/5월9일~5월15일.md
@@ -12,7 +12,7 @@
 - [x] 리뷰 오면 반영
 
 ### 5월 11일(수)
-- [ ] 알고리즘 2문제
-- [ ] Spring Database Truncate cleaner 만들어보기
-- [ ] 피드백 오면 반영
-- [ ] ~ 섹션 8 반틈
+- [x] 알고리즘 2문제
+- [x] Spring Database Truncate cleaner 만들어보기
+- [x] 피드백 오면 반영
+- [x] ~ 섹션 8 반틈
