[파랑] 5월11일 계획 (#367)
* [파랑] 5월11일 계획

* [파랑] 5월11일 계획완료

--- a/파랑/5월9일~5월15일.md
+++ b/파랑/5월9일~5월15일.md
@@ -16,3 +16,10 @@
 어제 새벽 5시 30분 넘어서 자는 바람에 오늘 너무 피곤했다. 코딩하면서 졸았던 적이 없었는데 처음으로 하다가 졸았다..
 도저히 안 되겠어서 칼퇴하고 집와서 1시간 30분 정도 잤는데 계획에 구간 저장 기능 구현하기를 써버려서 지금까지 못 자고 기능을 구현했다^^ㅠ.
 그래도 오리가 중간에 와서 거의 1대1 코치를 해줘서 빠르게 끝낼 수 있었다^-^. 내일은 온라인으로 해야겠다. 휴식이 필요해..
+
+### 5월 11일 (수)
+- [x] 지하철 노선 추가, 구간 삭제 기능 완성하기
+---
+오늘 오프 나갔으면 나는 죽었다. 너무 피곤해서 오후 3시 30분까지 잤다. 푹 자니까 코딩도 잘 되고 상태도 훨씬 좋아진 것 같긴 하다.
+그리고 오늘도 오리가 계속 나 하는 거 봐주고 모르는 거 알려주고 해서 금방(?) 삭제까지 구현할 수 있었다. 오리최고..
+이제 새벽 4시인데 PR은 못날리겠고 테스트만 마저 완성하고 자야겠다. 내일은 진짜 PR 날리기 할 일에 넣어야지!
