[파랑] 5월12일 계획

--- a/파랑/5월9일~5월15일.md
+++ b/파랑/5월9일~5월15일.md
@@ -23,3 +23,8 @@
 오늘 오프 나갔으면 나는 죽었다. 너무 피곤해서 오후 3시 30분까지 잤다. 푹 자니까 코딩도 잘 되고 상태도 훨씬 좋아진 것 같긴 하다.
 그리고 오늘도 오리가 계속 나 하는 거 봐주고 모르는 거 알려주고 해서 금방(?) 삭제까지 구현할 수 있었다. 오리최고..
 이제 새벽 4시인데 PR은 못날리겠고 테스트만 마저 완성하고 자야겠다. 내일은 진짜 PR 날리기 할 일에 넣어야지!
+
+### 5월 12일 (목)
+- [ ] 사진 찍기
+- [ ] 스프링 스터디 2-4장 공부하기
+- [ ] 데일리 회식
