--- a/앨버/5월9일~5월13일.md
+++ b/앨버/5월9일~5월13일.md
@@ -18,3 +18,9 @@
 - [x] 장바구니 step1 페어 프로그래밍 (10:00 ~ 22:00)
 - [x] 리액트, 리덕스 공부 (react, redux, react-redux, redux-saga)
 - [x] 어제 작성한 코드 놓친 부분 공부하기
+
+## 5월 12일
+
+- [ ] 장바구니 step1 PR 제출 (~18:00)
+- [ ] 아침 수업
+- [ ] 휴식~
