--- a/잉/5월09일~5월13일.md
+++ b/잉/5월09일~5월13일.md
@@ -15,3 +15,8 @@
 - [x] 지하철 노선도 구간 등록, 삭제 예외처리 
 - [x] 지하철 노선도 구간 등록, 삭제 api 만들기 
 - [x] 네트워크 책 6장 15p 읽기
+
+### 5월 12일 (목)
+- [ ] 지하철 피드백오면 반영하기 (아직 안와서 구체적으로 작성 어려운 점 양해 부탁)
+- [ ] 네트워크책 ~132 
+- [ ] 운동 1시간
