--- a/오리/5월9일~5월15일.md
+++ b/오리/5월9일~5월15일.md
@@ -16,3 +16,8 @@
 - [x] Spring Database Truncate cleaner 만들어보기
 - [x] 피드백 오면 반영
 - [x] ~ 섹션 8 반틈
+
+### 5월 12일(목)
+- [ ] 테코톡 듣기
+- [ ]  Database cleaner 배포 후 어그로끌기
+- [ ] 놀겁니다
