feat: 코린 5월12일 계획 추가

--- a/코린/5월9일-5월15일.md
+++ b/코린/5월9일-5월15일.md
@@ -13,3 +13,11 @@
 
 - [x] 지하철 3단계 페어 코드에 모두 구현
 - [x] 알고리즘 스터디
+
+## 5월12일
+
+- [ ] 테코톡 보기
+- [ ] 어제 못 푼 알고리즘 다시 풀어보기
+- [ ] 알고리즘 스터디
+- [ ] http 6장 1,2,3 읽기
+- [ ] http 발표 준비
