5월 12일 에덴 계획

--- a/에덴/5월9일-5월15일.md
+++ b/에덴/5월9일-5월15일.md
@@ -17,3 +17,13 @@
 - [x] 3단계 
   - [x] 인수 테스트 작성하기
   - [x] 검증 로직 더 꼼꼼히 보기
+
+## 5월 12일
+
+- [ ] http 독서
+  - [ ] 6장 1, 2, 3
+- [ ] http 발표 준비
+- [ ] 테코톡 보기
+- [ ] 알고리즘 스터디
+- [ ] 신나게 프로필 사진찍기
+- [ ] 저녁에 집에서 푹 쉬기
