--- a/아서/5월 9일 ~5월 15일.md
+++ b/아서/5월 9일 ~5월 15일.md
@@ -21,3 +21,10 @@
 - [x] 미션 피드백 반영
   - [x] 프론트 페이지에서 구간이 보여지도록 수정
 - [x] 스프링 DB 강의 3개 듣기
+
+
+
+## 5월 12일
+
+- [x] 미션 피드백 반영
+- [x] 스프링 DB 강의 한 섹션 듣기
