5월 12일 에덴 계획 완료

--- a/에덴/5월9일-5월15일.md
+++ b/에덴/5월9일-5월15일.md
@@ -20,10 +20,10 @@
 
 ## 5월 12일
 
-- [ ] http 독서
-  - [ ] 6장 1, 2, 3
-- [ ] http 발표 준비
-- [ ] 테코톡 보기
-- [ ] 알고리즘 스터디
-- [ ] 신나게 프로필 사진찍기
-- [ ] 저녁에 집에서 푹 쉬기
+- [x] http 독서
+  - [x] 6장 1, 2, 3
+- [x] http 발표 준비
+- [x] 테코톡 보기
+- [x] 알고리즘 스터디
+- [x] 신나게 프로필 사진찍기
+- [x] 저녁에 집에서 푹 쉬기
