[오리] 5월 12일 계획 (#373)
* [오리] 5월 12일 계획

* [오리] 5월 12일 계획 완료

--- a/오리/5월9일~5월15일.md
+++ b/오리/5월9일~5월15일.md
@@ -16,3 +16,8 @@
 - [x] Spring Database Truncate cleaner 만들어보기
 - [x] 피드백 오면 반영
 - [x] ~ 섹션 8 반틈
+
+### 5월 12일(목)
+- [x] 테코톡 듣기
+- [x]  Database cleaner 배포 후 어그로끌기
+- [x] 놀겁니다
