[민초] 5월 13일 계획

--- a/민초/5월9일-5월15일.md
+++ b/민초/5월9일-5월15일.md
@@ -19,3 +19,10 @@
 
 - [x] 장바구니 PR 제출
 - [x] FE 오전 강의
+
+# 5.13.
+
+- [ ] 오전 FE 수업
+- [ ] Redux 문서 읽기
+- [ ] Redux-thunk 문서 읽기
+- [ ] MSW로 API Mocking 코드 작성해보기
