--- a/앨버/5월9일~5월13일.md
+++ b/앨버/5월9일~5월13일.md
@@ -24,3 +24,12 @@
 - [x] 장바구니 step1 PR 제출 (~18:00)
 - [x] 아침 수업
 - [x] 휴식~
+
+
+## 5월 13일
+
+- [ ] 코드 리뷰 스터디 과제 (~10:00)
+- [ ] 코드 리뷰 스터디
+- [ ] 회고 작성 (16:00 ~ 17:00)
+- [ ] 리액트 문서 읽기
+- [ ] 회식
