--- a/아서/5월 9일 ~5월 15일.md
+++ b/아서/5월 9일 ~5월 15일.md
@@ -28,3 +28,14 @@
 
 - [x] 미션 피드백 반영
 - [x] 스프링 DB 강의 한 섹션 듣기
+
+
+
+## 5월 13일
+
+- [ ] 미션 피드백 온다면 반영
+  - [ ] 안오면 다른 피드백 염탐
+- [ ] [인프런] 김영한님의 **스프링 DB 1편 - 데이터 접근 핵심 원리**
+  - [ ] 섹션 5. 자바 예외 이해
+- [ ] 사진 제출
+- [ ] 레벨 2 중간 회고
