--- a/티거/5월9일-5월15일.md
+++ b/티거/5월9일-5월15일.md
@@ -19,3 +19,15 @@
 
 - [x] 10시 30분 강의 < React & Redux >
 - [x] 장바구니 1단계 PR
+
+## 5월 13일 (금)
+
+- [ ] 10시 30분 강의 < Front-end TDD >
+- [ ] 출입증 사진 제출
+- [ ] LMS 자료 읽기
+  - [ ] Flux Architecture
+  - [ ] Redux
+  - [ ] Router
+  - [ ] Middleware
+  - [ ] Front-end TDD
+- [ ] 준조 회식
