--- a/코린/5월9일-5월15일.md
+++ b/코린/5월9일-5월15일.md
@@ -16,8 +16,14 @@
 
 ## 5월12일
 
-- [ ] 테코톡 보기
-- [ ] 어제 못 푼 알고리즘 다시 풀어보기
-- [ ] 알고리즘 스터디
-- [ ] http 6장 1,2,3 읽기
-- [ ] http 발표 준비
+- [x] 테코톡 보기
+- [x] 어제 못 푼 알고리즘 다시 풀어보기
+- [x] 알고리즘 스터디
+- [x] http 6장 1,2,3 읽기
+- [x] http 발표 준비
+
+## 5월13일
+
+- [ ] http 스터디
+- [ ] 지하철 1,2단계 피드백 재정리 및 코멘트달기
+- [ ] 술먹자
