[파랑] 5월13일 계획

--- a/파랑/5월9일~5월15일.md
+++ b/파랑/5월9일~5월15일.md
@@ -25,6 +25,10 @@
 이제 새벽 4시인데 PR은 못날리겠고 테스트만 마저 완성하고 자야겠다. 내일은 진짜 PR 날리기 할 일에 넣어야지!
 
 ### 5월 12일 (목)
-- [ ] 사진 찍기
-- [ ] 스프링 스터디 2-4장 공부하기
-- [ ] 데일리 회식
+- [x] 사진 찍기
+- [x] 스프링 스터디 2-4장 공부하기
+- [x] 데일리 회식
+
+### 5월 13일 (금)
+- [ ] 스프링 스터디
+- [ ] 코틀린 워들 페어 미션 PR
