--- a/민초/5월9일-5월15일.md
+++ b/민초/5월9일-5월15일.md
@@ -22,7 +22,7 @@
 
 # 5.13.
 
-- [ ] 오전 FE 수업
-- [ ] Redux 문서 읽기
-- [ ] Redux-thunk 문서 읽기
-- [ ] 수업 테스트 코드 따라 작성해보기
+- [x] 오전 FE 수업
+- [x] Redux 문서 읽기
+- [x] Redux-thunk 문서 읽기
+- [x] 수업 테스트 코드 따라 작성해보기
