--- a/앨버/5월9일~5월13일.md
+++ b/앨버/5월9일~5월13일.md
@@ -28,8 +28,8 @@
 
 ## 5월 13일
 
-- [ ] 코드 리뷰 스터디 과제 (~10:00)
-- [ ] 코드 리뷰 스터디
-- [ ] 회고 작성 (16:00 ~ 17:00)
-- [ ] 리액트 문서 읽기
-- [ ] 회식
+- [x] 코드 리뷰 스터디 과제 (~10:00)
+- [x] 코드 리뷰 스터디
+- [x] 회고 작성 (16:00 ~ 17:00)
+- [x] 리액트 문서 읽기
+- [x] 회식
