[티거] 5월 13일 계획 (#381)
출입증 사진 ㅋㅋㅋㅋㅋㅋㅋㅋ 제출했다
아침에 후다닥 100장 정도 찍었는데 결국 맨 마지막에 찍은 걸로 선택했다
뭐... 그냥저냥 마음에 든다

준조 회식~! 즐거웠다
맛있는 것도 많이 먹고 많이 웃었다
들어오는 길에 혼코노도 즐겼다
좀 이따 부모님이 오시는데 집안일이 쌓였다는 게 흠이다...
좀만 자고 일어나서 집안일을 좀 해야 될 것 같다

다음주 월요일에 전 공원조가 모이기로 했다
너무 좋아

오늘 민초 생일이다~~~! 🥳

--- a/티거/5월9일-5월15일.md
+++ b/티거/5월9일-5월15일.md
@@ -19,3 +19,15 @@
 
 - [x] 10시 30분 강의 < React & Redux >
 - [x] 장바구니 1단계 PR
+
+## 5월 13일 (금)
+
+- [x] 10시 30분 강의 < Front-end TDD >
+- [x] 출입증 사진 제출
+- [x] LMS 자료 읽기
+  - [x] Flux Architecture
+  - [x] Redux
+  - [x] Router
+  - [x] Middleware
+  - [x] Front-end TDD
+- [x] 준조 회식
