[오리] 5월 13일 계획 완료

--- a/오리/5월9일~5월15일.md
+++ b/오리/5월9일~5월15일.md
@@ -23,9 +23,9 @@
 - [x] 놀겁니다
 
 ### 5월 13일(금)
-- [ ] 섹션 8 나머지
-- [ ] 알고리즘 2문제
-- [ ] 오전회고
-- [ ] 오후 구수타
-- [ ] 영상근로 다음 인터뷰 기획 및 편집점 잡기
-- [ ] 저녁 회식
+- [x] 섹션 8 나머지
+- [x] 알고리즘 2문제
+- [x] 오전회고
+- [x] 오후 구수타
+- [x] 영상근로 다음 인터뷰 기획 및 편집점 잡기
+- [x] 저녁 회식
