[민초] 5월 13일 계획 (#377)
* [민초] 5월 13일 계획

* 계획 수정

* 완료

--- a/민초/5월9일-5월15일.md
+++ b/민초/5월9일-5월15일.md
@@ -19,3 +19,10 @@
 
 - [x] 장바구니 PR 제출
 - [x] FE 오전 강의
+
+# 5.13.
+
+- [x] 오전 FE 수업
+- [x] Redux 문서 읽기
+- [x] Redux-thunk 문서 읽기
+- [x] 수업 테스트 코드 따라 작성해보기
