220513 잉 일정 완료

--- a/잉/5월09일~5월13일.md
+++ b/잉/5월09일~5월13일.md
@@ -22,6 +22,6 @@
 - [x] 운동 1시간
 
 ### 5월 13일 (금)
-- [ ] 네트워크 스터디 
-- [ ] 학습로그 페어 프로그래밍 
-- [ ] 지하철 피드백 확인하고 의견 달기 
+- [x] 네트워크 스터디 
+- [x] 학습로그 페어 프로그래밍 
+- [x] 지하철 피드백 확인하고 의견 달기 
