[잉] 5월 13일 금 계획 (#382)
* 220513 잉 일정

* 220513 잉 일정 완료

--- a/잉/5월09일~5월13일.md
+++ b/잉/5월09일~5월13일.md
@@ -20,3 +20,8 @@
 - [x] 지하철 피드백오면 반영하기 (아직 안와서 구체적으로 작성 어려운 점 양해 부탁)
 - [x] 네트워크책 ~132 
 - [x] 운동 1시간
+
+### 5월 13일 (금)
+- [x] 네트워크 스터디 
+- [x] 학습로그 페어 프로그래밍 
+- [x] 지하철 피드백 확인하고 의견 달기 
