feat: 코린 5월16일 계획 추가

--- a/코린/5월9일-5월15일.md
+++ b/코린/5월9일-5월15일.md
@@ -24,6 +24,6 @@
 
 ## 5월13일
 
-- [ ] http 스터디
-- [ ] 지하철 1,2단계 피드백 재정리 및 코멘트달기
-- [ ] 술먹자
+- [x] http 스터디
+- [x] 지하철 1,2단계 피드백 재정리 및 코멘트달기
+- [x] 술먹자
