[오리] 5월 16일 계획

--- a/오리/5월16일~5월22일.md
+++ b/오리/5월16일~5월22일.md
@@ -1,8 +1,8 @@
 ### 5월 16일 (월)
-- [ ] 알고리즘 2문제
-- [ ] 오전 데일리플래너 이슈 해결 (readme 수정, 권한 추가 시 admin token 추가)
-- [ ] 2시 데일리플래너
-- [ ] 3시 영상근로 회의
-- [ ] 4시 면담
-- [ ] ~6시 좀 쉬자....
-- [ ] 지난주 강의 들은거 복기
+- [x] 알고리즘 2문제
+- [x] 오전 데일리플래너 이슈 해결 (readme 수정, 권한 추가 시 admin token 추가)
+- [x] 2시 데일리플래너
+- [x] 3시 영상근로 회의
+- [x] 4시 면담
+- [x] ~6시 좀 쉬자....
+- [x] 지난주 강의 들은거 복기
