[티거] 5월 16일 완료

--- a/티거/5월16일-5월22일.md
+++ b/티거/5월16일-5월22일.md
@@ -2,7 +2,7 @@
 
 ## 5월 16일 (월)
 
-- [ ] 14시 데일리플래너 회의
-- [ ] 장바구니 2단계
-  - [ ] 구현할 기능 목록 정리
-- [ ] 전 공원조 회식
+- [x] 14시 데일리플래너 회의
+- [x] 장바구니 2단계
+  - [x] 구현할 기능 목록 정리
+- [x] 전 공원조 회식
