--- a/티거/5월16일-5월22일.md
+++ b/티거/5월16일-5월22일.md
@@ -6,3 +6,16 @@
 - [x] 장바구니 2단계
   - [x] 구현할 기능 목록 정리
 - [x] 전 공원조 회식
+
+## 5월 17일 (화)
+
+- [x] 10시 30분 강의 < 장바구니 미션 피드백 >
+- [ ] 강의 복습 및 정리
+  - [ ] 장바구니 미션 소개
+  - [ ] 장바구니 미션 피드백
+- [ ] 장바구니 2단계
+  - [ ] router 구현
+  - [ ] 장바구니 페이지 컴포넌트 구현
+    - [ ] 헤더
+    - [ ] 상품
+- [ ] 저녁 약속
