--- a/민초/5월16일-5월20일.md
+++ b/민초/5월16일-5월20일.md
@@ -9,3 +9,6 @@
 - [ ] 장바구니 step1 merge되기 전까지 개인 공부
   - [ ] MSW 예제코드 보기
   - [ ] LMS 문서 읽기
+- [ ] if(장바구니 step1 merge)
+  - [ ] step1 추가 피드백 반영
+  - [ ] 기존 CSS 피그마 시안에 맞추어 수정
