--- a/아서/5월16일~5월22일.md
+++ b/아서/5월16일~5월22일.md
@@ -10,8 +10,8 @@
 
 ## 5월 17일
 
-- [ ] 새로운 페어 미션 시작
-  - [ ] 아이스 브레이킹 하기
-  - [ ] 지하철 노선도 관리 옮겨오기
-  - [ ] 경로 조회 기능 구상하기
-- [ ] 오브젝트 Chap3 역할, 책임, 협력 p73 ~ p96 읽기
+- [x] 새로운 페어 미션 시작
+  - [x] 아이스 브레이킹 하기
+  - [x] 지하철 노선도 관리 옮겨오기
+  - [x] 경로 조회 기능 구상하기
+- [x] 오브젝트 Chap3 역할, 책임, 협력 p73 ~ p96 읽기
