--- a/아서/5월16일~5월22일.md
+++ b/아서/5월16일~5월22일.md
@@ -6,3 +6,12 @@
 - [x] 오브젝트 Chap2 객체지향 프로그래밍 p32 ~ p72 읽기
 - [x] 주간 회고 작성
 
+
+
+## 5월 17일
+
+- [x] 새로운 페어 미션 시작
+  - [x] 아이스 브레이킹 하기
+  - [x] 지하철 노선도 관리 옮겨오기
+  - [x] 경로 조회 기능 구상하기
+- [x] 오브젝트 Chap3 역할, 책임, 협력 p73 ~ p96 읽기
