--- a/코린/5월16일-5월22일.md
+++ b/코린/5월16일-5월22일.md
@@ -7,7 +7,7 @@
 
 ## 5월17일
 
-- [ ] Spring Configuration 수업
-- [ ] 워니와 면담
-- [ ] http 스터디
-- [ ] 지하철 경로 조회 페어프로그래밍
+- [x] Spring Configuration 수업
+- [x] 워니와 면담
+- [x] http 스터디
+- [x] 지하철 경로 조회 페어프로그래밍
