--- a/앨버/5월16일~5월20일.md
+++ b/앨버/5월16일~5월20일.md
@@ -8,7 +8,7 @@
 
 ## 5월 17일
 
-- [ ] step1 리팩토링 (09:00 ~ 10:00)
-- [ ] 테코톡 준비 (14:00 ~ 18:00 사이)
-- [ ] javascript 복습 (08:00  09:00)
-- [ ] step2 테스트 코드 작성 (나머지 시간)
+- [x] step1 리팩토링 (09:00 ~ 10:00)
+- [x] 테코톡 준비 (14:00 ~ 18:00 사이)
+- [x] javascript 복습 (08:00  09:00)
+- [x] step2 테스트 코드 작성 (나머지 시간)
