[파랑] 5월17일 계획완료

--- a/파랑/5월16일~5월22일.md
+++ b/파랑/5월16일~5월22일.md
@@ -5,7 +5,7 @@
 - [x] 지하철 피드백 오면 -> 반영
 
 ### 5월 17일 (화)
-- [ ] 지하철 경로 조회 페어 시작
-  - [ ] 페어랑 친해지는 시간 가지기
-  - [ ] 앞으로의 계획과 규칙 정하기
-- [ ] 스프링 스터디 6장 1/2 공부
+- [x] 지하철 경로 조회 페어 시작
+  - [x] 페어랑 친해지는 시간 가지기
+  - [x] 앞으로의 계획과 규칙 정하기
+- [x] 스프링 스터디 6장 1/2 공부
