--- a/티거/5월16일-5월22일.md
+++ b/티거/5월16일-5월22일.md
@@ -10,12 +10,12 @@
 ## 5월 17일 (화)
 
 - [x] 10시 30분 강의 < 장바구니 미션 피드백 >
-- [ ] 강의 복습 및 정리
-  - [ ] 장바구니 미션 소개
-  - [ ] 장바구니 미션 피드백
-- [ ] 장바구니 2단계
-  - [ ] router 구현
-  - [ ] 장바구니 페이지 컴포넌트 구현
-    - [ ] 헤더
-    - [ ] 상품
-- [ ] 저녁 약속
+- [x] 강의 복습 및 정리
+  - [x] 장바구니 미션 소개
+  - [x] 장바구니 미션 피드백
+- [x] 장바구니 2단계
+  - [x] router 구현
+  - [x] 장바구니 페이지 컴포넌트 구현
+    - [x] 헤더
+    - [x] 상품
+- [x] 저녁 약속
