feat: 코린 5월18일 계획 추가

--- a/코린/5월16일-5월22일.md
+++ b/코린/5월16일-5월22일.md
@@ -11,3 +11,9 @@
 - [x] 워니와 면담
 - [x] http 스터디
 - [x] 지하철 경로 조회 페어프로그래밍
+
+## 5월18일
+
+- [ ] 지하철 경로 페어 및 PR
+- [ ] 알고리즘 스터디
+- [ ] 향후 공부 방향성에 대해서 고민하기
