--- a/아서/5월16일~5월22일.md
+++ b/아서/5월16일~5월22일.md
@@ -15,3 +15,10 @@
   - [x] 지하철 노선도 관리 옮겨오기
   - [x] 경로 조회 기능 구상하기
 - [x] 오브젝트 Chap3 역할, 책임, 협력 p73 ~ p96 읽기
+
+
+
+## 5월 18일
+
+- [x] 페어 프로그래밍
+- [x] 브라운 회식
