feat: 코린 5월18일 계획 완료

--- a/코린/5월16일-5월22일.md
+++ b/코린/5월16일-5월22일.md
@@ -14,6 +14,6 @@
 
 ## 5월18일
 
-- [ ] 지하철 경로 페어 및 PR
-- [ ] 알고리즘 스터디
-- [ ] 향후 공부 방향성에 대해서 고민하기
+- [x] 지하철 경로 페어 및 PR
+- [x] 알고리즘 스터디
+- [x] 향후 공부 방향성에 대해서 고민하기
