--- a/오리/5월16일~5월22일.md
+++ b/오리/5월16일~5월22일.md
@@ -12,7 +12,6 @@
 - [x] 페어시작
 
 ### 5월 18일(수)
-- [ ] 알고리즘 2문제
-- [ ] 피드백오면 반영 / 머지되면 2단계
-- [ ] 더자바 강의 1섹션
-- [ ] 영화보기 범죄도시2
+- [x] 알고리즘 2문제
+- [x] 더자바 강의 1섹션
+- [x] 영화보기 범죄도시2
