--- a/민초/5월16일-5월20일.md
+++ b/민초/5월16일-5월20일.md
@@ -15,8 +15,8 @@
 
 # 5. 18.
 
-- [ ] 장바구니 step2
-  - [ ] CSS 추가 수정
-  - [ ] 로컬 구동시 에러 해결
-  - [ ] 서버 로컬로 변경
-- [ ] 운동
+- [x] 장바구니 step2
+  - [x] CSS 추가 수정
+  - [x] 로컬 구동시 에러 해결
+  - [x] 서버 로컬로 변경
+- [x] 운동
