[민초] 5월 18일 계획 (#407)
* [민초] 5월 18일 계획

* 완료

--- a/민초/5월16일-5월20일.md
+++ b/민초/5월16일-5월20일.md
@@ -12,3 +12,11 @@
 - [x] if(장바구니 step1 merge)
   - [x] step1 추가 피드백 반영
   - [x] 기존 CSS 피그마 시안에 맞추어 수정
+
+# 5. 18.
+
+- [x] 장바구니 step2
+  - [x] CSS 추가 수정
+  - [x] 로컬 구동시 에러 해결
+  - [x] 서버 로컬로 변경
+- [x] 운동
