--- a/에덴/5월16일-5월22일.md
+++ b/에덴/5월16일-5월22일.md
@@ -14,8 +14,8 @@
 
 ## 5월 18일
 
-- [ ] 면담
-- [ ] 페어 후 PR
-  - [ ] 인수테스트 진행하기
-  - [ ] 코드 리팩토링하기
-- [ ] http 책 읽기
+- [x] 면담
+- [x] 페어 후 PR
+  - [x] 인수테스트 진행하기
+  - [x] 코드 리팩토링하기
+- [x] http 책 읽기
