[에덴] 5월 18일 계획 (#415)
* 5월 18일 에덴 계획

* 5월 18일 에덴 계획 완료

--- a/에덴/5월16일-5월22일.md
+++ b/에덴/5월16일-5월22일.md
@@ -11,3 +11,11 @@
 - [x] 수업듣기
 - [x] 근로 회의 마무리
 - [x] 새로운 미션 페어와 신나게 하기!
+
+## 5월 18일
+
+- [x] 면담
+- [x] 페어 후 PR
+  - [x] 인수테스트 진행하기
+  - [x] 코드 리팩토링하기
+- [x] http 책 읽기
