--- a/앨버/5월16일~5월20일.md
+++ b/앨버/5월16일~5월20일.md
@@ -16,10 +16,10 @@
 
 ## 5월 18일
 
-- [ ] 자바스크립트 공부 (08:00 ~ 09:00)
-- [ ] step2 미션 (하루종일)
- - [ ] 리팩토링
- - [ ] 재방문을 고려한 UI/UX 생각해보기
- - [ ] API Endpoint 생각해서 API 만들기
+- [x] 자바스크립트 공부 (08:00 ~ 09:00)
+- [x] step2 미션 (하루종일)
+ - [x] 리팩토링
+ - [x] 재방문을 고려한 UI/UX 생각해보기
+ - [x] API Endpoint 생각해서 API 만들기
    * Real API 없이 로컬에서만 동작하는 상태로 리뷰 받는 것이 기본 원칙입니다.
-- [ ] 테코톡 준비 2시간 (아무때나)
+- [x] 테코톡 준비 2시간 (아무때나)
