[티거] 5월 18일 완료

--- a/티거/5월16일-5월22일.md
+++ b/티거/5월16일-5월22일.md
@@ -22,6 +22,6 @@
 
 ## 5월 18일 (수)
 
-- [ ] 장바구니 2단계
-  - [ ] 장바구니 페이지 컴포넌트 구현
-  - [ ] MSW API mocking
+- [x] 장바구니 2단계
+  - [x] 장바구니 페이지 컴포넌트 구현
+  - [x] MSW API mocking
