[파랑] 5월18일 계획완료

--- a/파랑/5월16일~5월22일.md
+++ b/파랑/5월16일~5월22일.md
@@ -11,6 +11,6 @@
 - [x] 스프링 스터디 6장 1/2 공부
 
 ### 5월 18일 (수)
-- [ ] 지하철 경로 조회 PR
-- [ ] 지원 플랫폼 근로 수업
-- [ ] 스프링 스터디 6장 2/2 공부
+- [x] 지하철 경로 조회 PR
+- [x] 지원 플랫폼 근로 수업
+- [x] 스프링 스터디 6장 2/2 공부
