[파랑] 5월18일 계획 (#409)
* [파랑] 5월18일 계획

* [파랑] 5월18일 계획완료

--- a/파랑/5월16일~5월22일.md
+++ b/파랑/5월16일~5월22일.md
@@ -9,3 +9,8 @@
   - [x] 페어랑 친해지는 시간 가지기
   - [x] 앞으로의 계획과 규칙 정하기
 - [x] 스프링 스터디 6장 1/2 공부
+
+### 5월 18일 (수)
+- [x] 지하철 경로 조회 PR
+- [x] 지원 플랫폼 근로 수업
+- [x] 스프링 스터디 6장 2/2 공부
