--- a/오리/5월16일~5월22일.md
+++ b/오리/5월16일~5월22일.md
@@ -15,3 +15,10 @@
 - [x] 알고리즘 2문제
 - [x] 더자바 강의 1섹션
 - [x] 영화보기 범죄도시2
+
+### 5월 19일(목)
+- [x] 요가 1시간
+- [ ] 알고리즘 2문제
+- [ ] 미션 머지되면 2단계
+- [ ] 더자바 강의 2섹션
+- [ ] 데일리회식
