[아서] 5월 19일 계획

--- a/아서/5월16일~5월22일.md
+++ b/아서/5월16일~5월22일.md
@@ -22,3 +22,12 @@
 
 - [x] 페어 프로그래밍
 - [x] 브라운 회식
+
+
+
+## 5월 19일
+
+- [ ] 지하철 노선도 PR 보내기
+- [ ] [인프런]  김영한님의 **스프링 핵심 원리 - 기본편**
+  - [ ] 섹션 7. 의존관계 자동 주입
+- [ ] 오브젝트 ~p100 대화 주제 준비
