--- a/코린/5월16일-5월22일.md
+++ b/코린/5월16일-5월22일.md
@@ -17,3 +17,9 @@
 - [x] 지하철 경로 페어 및 PR
 - [x] 알고리즘 스터디
 - [x] 향후 공부 방향성에 대해서 고민하기
+
+## 5월19일
+
+- [ ] HTTP 스터디 발표준비
+- [ ] 지하철 경로 2단계 구상하기
+- [ ] 워니조 회식
