5월 19일 에덴 계획

--- a/에덴/5월16일-5월22일.md
+++ b/에덴/5월16일-5월22일.md
@@ -19,3 +19,10 @@
   - [x] 인수테스트 진행하기
   - [x] 코드 리팩토링하기
 - [x] http 책 읽기
+
+## 5월 19일
+
+- [ ] http 발표 자료 만들기
+- [ ] 알고리즘 스터디
+- [ ] 크루들 학습 블로그 파도타기
+- [ ] 저녁 회식
