--- a/잉/5월16일~5월20일.md
+++ b/잉/5월16일~5월20일.md
@@ -11,3 +11,9 @@
 ### 5월 18일 (수)
 - [x] 지하철 구간 페어
 - [x] 향후 공부 방향성에 대해서 고민하기
+
+### 5월 19일 (목)
+- [ ] 지하철 구간 미션 PR
+- [ ] 네트워크 발표 자료 만들기
+- [ ] @Cofiguration 학습 테스트 해보기.
+- [ ] 학습로그 회의
