--- a/앨버/5월16일~5월20일.md
+++ b/앨버/5월16일~5월20일.md
@@ -23,3 +23,12 @@
  - [x] API Endpoint 생각해서 API 만들기
    * Real API 없이 로컬에서만 동작하는 상태로 리뷰 받는 것이 기본 원칙입니다.
 - [x] 테코톡 준비 2시간 (아무때나)
+
+## 5월 19일
+
+- [ ] step2 미션(하루종일, 금요일 PR 마감 예정) (10:30 ~ 12:30, 13:30 ~)
+- [ ] 근로 과제 (15:00 ~ 16:00)
+- [ ] 근로 회의 (16:00 ~ 18:00)
+- [ ] 자바스크립트 복습 1시간 (아무때나)
+- [ ] 테코톡 준비 2시간 (아무때나)
+- [ ] 코드 리뷰 스터디 과제 1시간 (아무때나)
