--- a/티거/5월16일-5월22일.md
+++ b/티거/5월16일-5월22일.md
@@ -25,3 +25,10 @@
 - [x] 장바구니 2단계
   - [x] 장바구니 페이지 컴포넌트 구현
   - [x] MSW API mocking
+
+## 5월 19일 (목)
+
+- [ ] 장바구니 2단계 🏃🏻‍♀️
+  - [ ] 장바구니 페이지 컴포넌트 완성
+  - [ ] 상태 관리 큰 그림 그리기
+  - [ ] MSW 에러 해결도 하고 싶다...!
