--- a/아서/5월16일~5월22일.md
+++ b/아서/5월16일~5월22일.md
@@ -22,3 +22,14 @@
 
 - [x] 페어 프로그래밍
 - [x] 브라운 회식
+
+
+
+## 5월 19일
+
+- [x] 지하철 노선도 PR 보내기
+- [x] [인프런]  김영한님의 **스프링 핵심 원리 - 기본편**
+  - [x] 섹션 7. 의존관계 자동 주입
+- [x] 오브젝트 ~p100 대화 주제 준비
+- [x] 브라운과의 면담
+- [x] 포비와의 면담 주제 정리
