[파랑] 5월19일 계획 (#420)
* [파랑] 5월19일 계획

* [파랑] 5월19일 계획완료

--- a/파랑/5월16일~5월22일.md
+++ b/파랑/5월16일~5월22일.md
@@ -14,3 +14,9 @@
 - [x] 지하철 경로 조회 PR
 - [x] 지원 플랫폼 근로 수업
 - [x] 스프링 스터디 6장 2/2 공부
+
+### 5월 19일 (목)
+- [x] 지하철 경로 조회 2단계 설계
+- [x] 스프링 스터디 7장 공부
+- [x] 코틀린 워들 리뷰 달기
+- [x] 20시 필라테스
