220519 앨버 계획 완료

--- a/앨버/5월16일~5월20일.md
+++ b/앨버/5월16일~5월20일.md
@@ -26,9 +26,9 @@
 
 ## 5월 19일
 
-- [ ] step2 미션(하루종일, 금요일 PR 마감 예정) (10:30 ~ 12:30, 13:30 ~)
-- [ ] 근로 과제 (15:00 ~ 16:00)
-- [ ] 근로 회의 (16:00 ~ 18:00)
-- [ ] 자바스크립트 복습 1시간 (아무때나)
-- [ ] 테코톡 준비 2시간 (아무때나)
-- [ ] 코드 리뷰 스터디 과제 1시간 (아무때나)
+- [x] step2 미션(하루종일, 금요일 PR 마감 예정) (10:30 ~ 12:30, 13:30 ~)
+- [x] 근로 과제 (15:00 ~ 16:00)
+- [x] 근로 회의 (16:00 ~ 18:00)
+- [x] 자바스크립트 복습 1시간 (아무때나)
+- [x] 테코톡 준비 2시간 (아무때나)
+- [x] 코드 리뷰 스터디 과제 1시간 (아무때나)
