[오리] 5월 19일 계획 완료

--- a/오리/5월16일~5월22일.md
+++ b/오리/5월16일~5월22일.md
@@ -18,7 +18,6 @@
 
 ### 5월 19일(목)
 - [x] 요가 1시간
-- [ ] 알고리즘 2문제
-- [ ] 미션 머지되면 2단계
-- [ ] 더자바 강의 2섹션
-- [ ] 데일리회식
+- [x] 알고리즘 2문제
+- [x] 더자바 강의 2섹션
+- [x] 데일리회식
