220519 잉 일정 완료

--- a/잉/5월16일~5월20일.md
+++ b/잉/5월16일~5월20일.md
@@ -13,7 +13,7 @@
 - [x] 향후 공부 방향성에 대해서 고민하기
 
 ### 5월 19일 (목)
-- [ ] 지하철 구간 미션 PR
-- [ ] 네트워크 발표 자료 만들기
-- [ ] @Configuration 학습 테스트 해보기.
-- [ ] 학습로그 회의
+- [x] 지하철 구간 미션 PR
+- [x] 네트워크 발표 자료 만들기
+- [x] @Configuration 학습 테스트 해보기.
+- [x] 학습로그 회의
