[아서] 5월 20일 계획

--- a/아서/5월16일~5월22일.md
+++ b/아서/5월16일~5월22일.md
@@ -33,3 +33,13 @@
 - [x] 오브젝트 ~p100 대화 주제 준비
 - [x] 브라운과의 면담
 - [x] 포비와의 면담 주제 정리
+
+
+
+## 5월 20일
+
+- [ ] 브라운 ATDD 수업
+- [ ] 포수타
+- [ ] 포비 면담
+- [ ] 1차 PR 피드백 반영 + 리뷰어의 질문 공부 및 답변
+- [ ] 저녁 약속
