feat: 코린 5월20일 계획 추가

--- a/코린/5월16일-5월22일.md
+++ b/코린/5월16일-5월22일.md
@@ -20,6 +20,12 @@
 
 ## 5월19일
 
-- [ ] HTTP 스터디 발표준비
-- [ ] 지하철 경로 2단계 구상하기
-- [ ] 워니조 회식
+- [x] HTTP 스터디 발표준비
+- [x] 지하철 경로 2단계 구상하기
+- [x] 워니조 회식
+
+## 5월20일
+
+- [ ] 지하철 경로 리뷰 오면 피드백 반영하기
+- [ ] atdd 수업 듣기
+- [ ] HTTP 스터디
