5월 20일 에덴 계획

--- a/에덴/5월16일-5월22일.md
+++ b/에덴/5월16일-5월22일.md
@@ -22,7 +22,13 @@
 
 ## 5월 19일
 
-- [ ] http 발표 자료 만들기
-- [ ] 알고리즘 스터디
-- [ ] 크루들 학습 블로그 파도타기
-- [ ] 저녁 회식
+- [x] http 발표 자료 만들기
+- [x] 알고리즘 스터디
+- [x] 크루들 학습 블로그 파도타기
+- [x] 저녁 회식
+
+## 5월 20일
+
+- [ ] 브라운 특강 듣기
+- [ ] HTTP 스터디
+- [ ] 블로그 주제 구상하기 스프링쪽으로
