--- a/잉/5월16일~5월20일.md
+++ b/잉/5월16일~5월20일.md
@@ -17,3 +17,9 @@
 - [x] 네트워크 발표 자료 만들기
 - [x] @Configuration 학습 테스트 해보기.
 - [x] 학습로그 회의
+
+### 5월 20일 (금)
+안녕하세요. 사실 어제 계획을 완료하지 못했는데 merge르
+했습니다. 죄송합니다.ㅎ 
+- [ ] 지하철 구간 미션 2단계 구상
+- [ ] 네트워크 스터디
