[아서] 5월 21일 완료

--- a/아서/5월16일~5월22일.md
+++ b/아서/5월16일~5월22일.md
@@ -38,9 +38,9 @@
 
 ## 5월 20일
 
-- [ ] 브라운 ATDD 수업
-- [ ] 포수타
-- [ ] 스프링 스터디
-- [ ] 포비 면담
-- [ ] 1차 PR 피드백 반영 + 리뷰어의 질문 공부 및 답변
-- [ ] 저녁 약속
+- [x] 브라운 ATDD 수업
+- [x] 포수타
+- [x] 스프링 스터디
+- [x] 포비 면담
+- [x] 1차 PR 피드백 반영 + 리뷰어의 질문 공부 및 답변
+- [x] 저녁 약속
