[티거] 5월 20일 완료

--- a/티거/5월16일-5월22일.md
+++ b/티거/5월16일-5월22일.md
@@ -35,6 +35,6 @@
 
 ## 5월 20일 (금)
 
-- [ ] 10시 30분 학습로그 말하기
-- [ ] 11시 10분 강의 < Front-end TDD (2/2) >
-- [ ] 장바구니 2단계
+- [x] 10시 30분 학습로그 말하기
+- [x] 11시 10분 강의 < Front-end TDD (2/2) >
+- [x] 장바구니 2단계
