--- a/티거/5월16일-5월22일.md
+++ b/티거/5월16일-5월22일.md
@@ -29,6 +29,12 @@
 ## 5월 19일 (목)
 
 - [ ] 장바구니 2단계 🏃🏻‍♀️
-  - [ ] 장바구니 페이지 컴포넌트 완성
+  - [x] 장바구니 페이지 컴포넌트 완성
   - [ ] 상태 관리 큰 그림 그리기
   - [ ] MSW 에러 해결도 하고 싶다...!
+
+## 5월 20일 (금)
+
+- [x] 10시 30분 학습로그 말하기
+- [x] 11시 10분 강의 < Front-end TDD (2/2) >
+- [x] 장바구니 2단계
