[파랑] 5월20일 계획 (#426)
* [파랑] 5월20일 계획

* [파랑] 5월20일 계획수정

--- a/파랑/5월16일~5월22일.md
+++ b/파랑/5월16일~5월22일.md
@@ -20,3 +20,11 @@
 - [x] 스프링 스터디 7장 공부
 - [x] 코틀린 워들 리뷰 달기
 - [x] 20시 필라테스
+
+### 5월 20일 (금)
+- 지하철 경로 조회 2단계
+  - [ ] 피드백 반영
+  - [ ] 노선에 추가요금 필드 추가
+  - [ ] 노선이랑 경로를 어떻게 연결시킬 것인지?..
+- [ ] 14시 30분 스프링 스터디
+- [ ] 18시 저녁 약속
