5월 20일 에덴 계획 완료

--- a/에덴/5월16일-5월22일.md
+++ b/에덴/5월16일-5월22일.md
@@ -29,6 +29,6 @@
 
 ## 5월 20일
 
-- [ ] 브라운 특강 듣기
-- [ ] HTTP 스터디
-- [ ] 블로그 주제 구상하기 스프링쪽으로
+- [x] 브라운 특강 듣기
+- [x] HTTP 스터디
+- [x] 블로그 주제 구상하기 스프링쪽으로
