220520 잉 일정 완료

--- a/잉/5월16일~5월20일.md
+++ b/잉/5월16일~5월20일.md
@@ -21,5 +21,5 @@
 ### 5월 20일 (금)
 안녕하세요. 사실 어제 계획을 완료하지 못했는데 merge르
 했습니다. 죄송합니다.ㅎ 
-- [ ] 지하철 구간 미션 2단계 구상
-- [ ] 네트워크 스터디
+- [x] 지하철 구간 미션 2단계 구상
+- [x] 네트워크 스터디
