220520 앨버계획완료

--- a/앨버/5월16일~5월20일.md
+++ b/앨버/5월16일~5월20일.md
@@ -36,8 +36,8 @@
 
 ## 5월 20일
 
-- [ ] 코드 리뷰 스터디 과제 (08:20 ~ 10:00)
-- [ ] 코드 리뷰 스터디 (14:30 ~ 17:30)
-- [ ] step2 (17:30 ~ 22:00)
-  - [ ] MSW
-  - [ ] 테스트 코드 (reducer, 컴포넌트 한 개)
+- [x] 코드 리뷰 스터디 과제 (08:20 ~ 10:00)
+- [x] 코드 리뷰 스터디 (14:30 ~ 17:30)
+- [x] step2 (17:30 ~ 22:00)
+  - [x] MSW
+  - [x] 테스트 코드 (reducer, 컴포넌트 한 개)
