[앨버] 5월 20일 계획 (#425)
* 220520 앨버 계획

* 220520 앨버계획완료

--- a/앨버/5월16일~5월20일.md
+++ b/앨버/5월16일~5월20일.md
@@ -32,3 +32,12 @@
 - [x] 자바스크립트 복습 1시간 (아무때나)
 - [x] 테코톡 준비 2시간 (아무때나)
 - [x] 코드 리뷰 스터디 과제 1시간 (아무때나)
+
+
+## 5월 20일
+
+- [x] 코드 리뷰 스터디 과제 (08:20 ~ 10:00)
+- [x] 코드 리뷰 스터디 (14:30 ~ 17:30)
+- [x] step2 (17:30 ~ 22:00)
+  - [x] MSW
+  - [x] 테스트 코드 (reducer, 컴포넌트 한 개)
