--- a/코린/5월16일-5월22일.md
+++ b/코린/5월16일-5월22일.md
@@ -26,7 +26,7 @@
 
 ## 5월20일
 
-- [ ] 지하철 경로 리뷰 오면 피드백 반영하기
-- [ ] atdd 수업 듣기
-- [ ] HTTP 스터디
-- [ ] 어제 못 푼 알고리즘 다시 풀기
+- [x] 지하철 경로 리뷰 오면 피드백 반영하기
+- [x] atdd 수업 듣기
+- [x] HTTP 스터디
+- [x] 어제 못 푼 알고리즘 다시 풀기
