--- a/민초/5월16일-5월20일.md
+++ b/민초/5월16일-5월20일.md
@@ -30,12 +30,10 @@
 
 # 5.20.
 
-- [ ] 수업
-- [ ] 장바구니 step2
+- [x] 수업
+- [x] 장바구니 step2
   - [ ] CRUD
-  - [ ] mock data 추가
-
-
+  - [x] mock data 추가
 
 
 
