[파랑] 5월20일 계획완료

--- a/파랑/5월16일~5월22일.md
+++ b/파랑/5월16일~5월22일.md
@@ -23,8 +23,8 @@
 
 ### 5월 20일 (금)
 - 지하철 경로 조회 2단계
-  - [ ] 피드백 반영
-  - [ ] 노선에 추가요금 필드 추가
-  - [ ] 노선이랑 경로를 어떻게 연결시킬 것인지?..
-- [ ] 14시 30분 스프링 스터디
-- [ ] 18시 저녁 약속
+  - [x] 피드백 반영
+  - [x] 노선에 추가요금 필드 추가
+  - [x] 노선이랑 경로를 어떻게 연결시킬 것인지?..
+- [x] 14시 30분 스프링 스터디
+- [x] 18시 저녁 약속
