--- a/잉/5월23일~5월27일.md
+++ b/잉/5월23일~5월27일.md
@@ -1,25 +1,5 @@
-### 5월 16일 (월)
-- [x] 네트워크 책 읽기 ~181
-- [x] 네트워크 발표자료 만들기.
-- [x] 학습로그 페어 진행.
-- [x] 운동 1시간.
-
-### 5월 17일 (화)
-- [x] 네트워크 스터디. 
-- [x] 지하철 경로조회 페어. 
-
-### 5월 18일 (수)
-- [x] 지하철 구간 페어
-- [x] 향후 공부 방향성에 대해서 고민하기
-
-### 5월 19일 (목)
-- [x] 지하철 구간 미션 PR
-- [x] 네트워크 발표 자료 만들기
-- [x] @Configuration 학습 테스트 해보기.
-- [x] 학습로그 회의
-
-### 5월 20일 (금)
-안녕하세요. 사실 어제 계획을 완료하지 못했는데 merge르
-했습니다. 죄송합니다.ㅎ 
-- [x] 지하철 구간 미션 2단계 구상
-- [x] 네트워크 스터디
+### 5월 23일 (월)
+- [ ] 학습로그 회의 15:00~
+- [ ] 스프링 스터디 발표자료 만들기
+- [ ] 영화관 19:45~
+- [ ] 지하철 피드백 반영(안오면 못한다.) 
