[아서] 5월 23일 완료

--- a/아서/5월23일~5월29일.md
+++ b/아서/5월23일~5월29일.md
@@ -1,8 +1,8 @@
 ## 5월 23일
 
-- [ ] 클린 아키텍쳐 3부 설계원칙(p60~p86) 읽기
-- [ ] 오브젝트 책으로 토크
-- [ ] 2단계 미션 구상하기
-- [ ] 주간 회고 작성하기
-- [ ] 저녁 약속
+- [x] 클린 아키텍쳐 3부 설계원칙(p60~p86) 읽기
+- [x] 오브젝트 책으로 토크
+- [x] 2단계 미션 구상하기
+- [x] 주간 회고 작성하기
+- [x] 저녁 약속
 
