[오리] 5월 23일 계획 완료

--- a/오리/5월23일~5월29일.md
+++ b/오리/5월23일~5월29일.md
@@ -1,6 +1,6 @@
 ### 5월 23일 (월)
-- [ ] 1시30분~2시30분 로이드 특강
-- [ ] 2시30분~3시 스터디
-- [ ] 3시~3시30분 영상근로 회의
-- [ ] 4시~5시 사이드 회의
-- [ ] 이번주 공부할거 좀 정리... 
+- [x] 1시30분~2시30분 로이드 특강
+- [x] 2시30분~3시 스터디
+- [x] 3시~3시30분 영상근로 회의
+- [x] 4시~5시 사이드 회의
+- [x] 이번주 공부할거 좀 정리... 
