--- a/코린/5월23일-5월29일.md
+++ b/코린/5월23일-5월29일.md
@@ -1,5 +1,5 @@
 ## 5월23일
 
-- [ ] `스프링5 입문` chapter3, chapter4 읽기
-- [ ] 알고리즘 스터디
-- [ ] `그림으로 배우는 http` chapter 11 읽기
+- [x] `스프링5 입문` chapter3, chapter4 읽기
+- [x] 알고리즘 스터디
+- [x] `그림으로 배우는 http` chapter 11 읽기
