220523 잉 일정 완료

--- a/잉/5월23일~5월27일.md
+++ b/잉/5월23일~5월27일.md
@@ -1,5 +1,5 @@
 ### 5월 23일 (월)
-- [ ] 학습로그 회의 15:00~
-- [ ] 스프링 스터디 발표자료 만들기
-- [ ] 영화관 19:45~
-- [ ] 지하철 피드백 반영(안오면 못한다.) 
+- [x] 학습로그 회의 15:00~
+- [x] 스프링 스터디 발표자료 만들기
+- [x] 영화관 19:45~
+- [x] 지하철 피드백 반영(안오면 못한다.) 
