--- a/에덴/5월23일-5월29일.md
+++ b/에덴/5월23일-5월29일.md
@@ -1,7 +1,7 @@
 ## 5월 23일
 
-- [ ] http 스터디
-- [ ] 알고리즘 스터디
-- [ ] spring 5 입문
-  - [ ] 3, 4장 읽기
-  - [ ] 발표 준비
+- [x] http 스터디
+- [x] 알고리즘 스터디
+- [x] spring 5 입문
+  - [x] 3, 4장 읽기
+  - [x] 발표 준비
