--- a/앨버/5월23일~5월27일.md
+++ b/앨버/5월23일~5월27일.md
@@ -1,5 +1,5 @@
 ## 5월 23일
 
-- [ ] 테코톡 준비 (하루 종일)
- - [ ] 관련된 내용 공부
- - [ ] ppt에 내용 다 적기
+- [x] 테코톡 준비 (하루 종일)
+ - [x] 관련된 내용 공부
+ - [x] ppt에 내용 다 적기
