[오리] 5월 24일 계획

--- a/오리/5월23일~5월29일.md
+++ b/오리/5월23일~5월29일.md
@@ -4,3 +4,9 @@
 - [x] 3시~3시30분 영상근로 회의
 - [x] 4시~5시 사이드 회의
 - [x] 이번주 공부할거 좀 정리... 
+
+### 5월 24일 (화)
+- [x] 오전 요가
+- [ ] 오전 강의
+- [ ] 오후 사이드 jwt 구현 추가
+- [ ] 저녁 닉소니 인터뷰
