--- a/티거/5월23일-5월29일.md
+++ b/티거/5월23일-5월29일.md
@@ -5,3 +5,11 @@
 - [x] 13시 30분 로이드 특강
 - [x] 로이드 특강 정리
 - [x] 페이먼츠 2단계 리뷰 피드백
+
+## 5월 24일 (화)
+
+- [ ] 10시 30분 강의 < 페이먼츠 Step3 미션 소개 >
+- [ ] 준 면담 사전 메일 전송
+- [ ] 커스텀 훅 학습
+- [ ] (장바구니 리뷰 오기 전까지만) 페이먼츠 2단계 리뷰 피드백
+- [ ] (리뷰 오면... 오늘은 올 것 같다) 장바구니 2단계 리뷰 피드백
