[파랑] 5월24일 계획완료

--- a/파랑/5월23일~5월29일.md
+++ b/파랑/5월23일~5월29일.md
@@ -12,6 +12,6 @@
 그래도 내 과외 선생님 오리가 옆에서 미션하는 거 계속 봐줘서 경로 조회 기능을 구현할 수 있었다. 파랑 지켜..
 
 ### 5월 24일 계획
-- [ ] 학습로그 말하기
-- [ ] 지하철 2단계 요금 조회 기능 구현
-- [ ] 저녁 약속
+- [x] 학습로그 말하기
+- [x] 지하철 2단계 요금 조회 기능 구현
+- [x] 저녁 약속
