feat: 코린 5월24일 계획 완료

--- a/코린/5월23일-5월29일.md
+++ b/코린/5월23일-5월29일.md
@@ -6,6 +6,6 @@
 
 ## 5월24일
 
-- [ ] 지하철 2단계 리뷰 반영 
-- [ ] 스프링 스터디
-- [ ] `스프링5 입문` chapter 5 읽기
+- [x] 지하철 2단계 리뷰 반영 
+- [x] 스프링 스터디
+- [x] `스프링5 입문` chapter 5 읽기
