[코린] 5월 24일 계획 (#448)
* feat: 코린 5월24일 계획 추가

* feat: 코린 5월24일 계획 완료

--- a/코린/5월23일-5월29일.md
+++ b/코린/5월23일-5월29일.md
@@ -3,3 +3,9 @@
 - [x] `스프링5 입문` chapter3, chapter4 읽기
 - [x] 알고리즘 스터디
 - [x] `그림으로 배우는 http` chapter 11 읽기
+
+## 5월24일
+
+- [x] 지하철 2단계 리뷰 반영 
+- [x] 스프링 스터디
+- [x] `스프링5 입문` chapter 5 읽기
