--- a/앨버/5월23일~5월27일.md
+++ b/앨버/5월23일~5월27일.md
@@ -7,7 +7,7 @@
 
 ## 5월 24일
 
-- [ ] 피드백 수정 (08:30 ~ 10:00)
-- [ ] payments step3 계획 세우기
-- [ ] payments step3 타입스크립트 변환 시작
-- [ ] 테코톡 (최소 5시간)
+- [x] 피드백 수정 (08:30 ~ 10:00)
+- [x] payments step3 계획 세우기
+- [x] payments step3 타입스크립트 변환 시작
+- [x] 테코톡 (최소 5시간)
