[민초] 5월 24일 계획 완료

--- a/민초/5월23일-5월27일.md
+++ b/민초/5월23일-5월27일.md
@@ -8,8 +8,8 @@
 
 # 5. 24.
 
-- [ ] 수업 듣기
-- [ ] 벨로퍼트 리액트 문서 읽기
-  - [ ] 리덕스 미들웨어
-  - [ ] 리액트 프로젝트에서 타입스크립트 사용하기
-- [ ] 저녁 운동 하기
+- [x] 수업 듣기
+- [x] 벨로퍼트 리액트 문서 읽기
+  - [x] 리덕스 미들웨어
+  - [x] 리액트 프로젝트에서 타입스크립트 사용하기
+- [x] 저녁 운동 하기
