[민초] 5월 24일 계획 (#444)
* [민초] 5월 24일 계획

* [민초] 5월 24일 계획 완료

--- a/민초/5월23일-5월27일.md
+++ b/민초/5월23일-5월27일.md
@@ -5,3 +5,11 @@
 - [x] 15시 영상근로 회의
 - [x] 테코톡 자막 작업
 - [x] 저녁 운동
+
+# 5. 24.
+
+- [x] 수업 듣기
+- [x] 벨로퍼트 리액트 문서 읽기
+  - [x] 리덕스 미들웨어
+  - [x] 리액트 프로젝트에서 타입스크립트 사용하기
+- [x] 저녁 운동 하기
