--- a/오리/5월23일~5월29일.md
+++ b/오리/5월23일~5월29일.md
@@ -7,6 +7,6 @@
 
 ### 5월 24일 (화)
 - [x] 오전 요가
-- [ ] 오전 강의
-- [ ] 오후 사이드 jwt 구현 추가
-- [ ] 저녁 닉소니 인터뷰
+- [x] 오전 강의
+- [x] 오후 사이드 jwt 구현 추가
+- [x] 저녁 닉소니 인터뷰
