220524 잉 일정 완료

--- a/잉/5월23일~5월27일.md
+++ b/잉/5월23일~5월27일.md
@@ -5,6 +5,6 @@
 - [x] 지하철 피드백 반영(안오면 못한다.) 
 
 ### 5월 24일 (화)
-- [ ] 스프링 스터디
-- [ ] 지하철 피드백 반영(안오면 안한다.)
-- [ ] 운동1시간 
+- [x] 스프링 스터디
+- [x] 지하철 피드백 반영(안오면 안한다.)
+- [x] 운동1시간 
