--- a/잉/5월23일~5월27일.md
+++ b/잉/5월23일~5월27일.md
@@ -3,3 +3,8 @@
 - [x] 스프링 스터디 발표자료 만들기
 - [x] 영화관 19:45~
 - [x] 지하철 피드백 반영(안오면 못한다.) 
+
+### 5월 24일 (화)
+- [x] 스프링 스터디
+- [x] 지하철 피드백 반영(안오면 안한다.)
+- [x] 운동1시간 
