[민초] 5월 25일 계획

--- a/민초/5월23일-5월27일.md
+++ b/민초/5월23일-5월27일.md
@@ -13,3 +13,11 @@
   - [x] 리덕스 미들웨어
   - [x] 리액트 프로젝트에서 타입스크립트 사용하기
 - [x] 저녁 운동 하기
+
+# 5. 25.
+
+- [ ] 리뷰 기다리기
+- [ ] 타입스크립트 공부
+- [ ] LMS 키워드 정리하기
+- [ ] 회식
+
