--- a/코린/5월23일-5월29일.md
+++ b/코린/5월23일-5월29일.md
@@ -9,3 +9,10 @@
 - [x] 지하철 2단계 리뷰 반영 
 - [x] 스프링 스터디
 - [x] `스프링5 입문` chapter 5 읽기
+
+## 5월25일
+
+- [ ] 알고리즘 스터디
+- [ ] `스프링5 입문` chapter 7 읽기
+- [ ] 스프링 발표 자료 준비하기
+- [ ] 블로그 포스팅 거리 찾기
