5월 25일 에덴 계획

--- a/에덴/5월23일-5월29일.md
+++ b/에덴/5월23일-5월29일.md
@@ -11,3 +11,10 @@
 - [x] 스프링 스터디
 - [x] 피드백 반영
 - [x] 스프링 5 입문 챕터 5 읽기
+
+## 5월 25일
+
+- [ ] 알고리즘 스터디
+- [ ] 근로 회의
+- [ ] 스프링 5 입문 챕터 6 읽기
+- [ ] 데플 회식
