--- a/앨버/5월23일~5월27일.md
+++ b/앨버/5월23일~5월27일.md
@@ -11,3 +11,10 @@
 - [x] payments step3 계획 세우기
 - [x] payments step3 타입스크립트 변환 시작
 - [x] 테코톡 (최소 5시간)
+
+## 5월 25일
+
+- [] 근로희의
+- [] 면담
+- [] 테코톡
+- [] 회식
