5월 25일 에덴 계획 완료

--- a/에덴/5월23일-5월29일.md
+++ b/에덴/5월23일-5월29일.md
@@ -14,7 +14,7 @@
 
 ## 5월 25일
 
-- [ ] 알고리즘 스터디
-- [ ] 근로 회의
-- [ ] 스프링 5 입문 챕터 6 읽기
-- [ ] 데플 회식
+- [x] 알고리즘 스터디
+- [x] 근로 회의
+- [x] 스프링 5 입문 챕터 6 읽기
+- [x] 데플 회식
