--- a/코린/5월23일-5월29일.md
+++ b/코린/5월23일-5월29일.md
@@ -12,6 +12,6 @@
 
 ## 5월25일
 
-- [ ] 알고리즘 스터디
-- [ ] `스프링5 입문` chapter 7 읽기
-- [ ] 스프링 발표 자료 준비하기
+- [x] 알고리즘 스터디
+- [x] `스프링5 입문` chapter 7 읽기
+- [x] 스프링 발표 자료 준비하기
