--- a/코린/5월23일-5월29일.md
+++ b/코린/5월23일-5월29일.md
@@ -9,3 +9,9 @@
 - [x] 지하철 2단계 리뷰 반영 
 - [x] 스프링 스터디
 - [x] `스프링5 입문` chapter 5 읽기
+
+## 5월25일
+
+- [x] 알고리즘 스터디
+- [x] `스프링5 입문` chapter 7 읽기
+- [x] 스프링 발표 자료 준비하기
