[오리] 5월 25일 계획 완료

--- a/오리/5월23일~5월29일.md
+++ b/오리/5월23일~5월29일.md
@@ -12,7 +12,7 @@
 - [x] 저녁 닉소니 인터뷰
 
 ### 5월 25일 (수)
-- [ ] jwt 필터 구현
-- [ ] 사이드 테이블 설계
-- [ ] 사이드 회의
-- [ ] 저녁 회식!!!!!
+- [x] jwt 필터 구현
+- [x] 사이드 테이블 설계
+- [x] 사이드 회의
+- [x] 저녁 회식!!!!!
