--- a/오리/5월23일~5월29일.md
+++ b/오리/5월23일~5월29일.md
@@ -10,3 +10,9 @@
 - [x] 오전 강의
 - [x] 오후 사이드 jwt 구현 추가
 - [x] 저녁 닉소니 인터뷰
+
+### 5월 25일 (수)
+- [x] jwt 필터 구현
+- [x] 사이드 테이블 설계
+- [x] 사이드 회의
+- [x] 저녁 회식!!!!!
