[아서] 5월 25일 완료

--- a/아서/5월23일~5월29일.md
+++ b/아서/5월23일~5월29일.md
@@ -17,7 +17,7 @@
 
 ## 5월 25일
 
-- [ ] TDD 30장, 31장 읽기
-- [ ] 피드백 오면 반영하기
-- [ ] 선정릉 산책
-- [ ] 저녁 약속
+- [x] TDD 30장, 31장 읽기
+- [x] 피드백 오면 반영하기
+- [x] 선정릉 산책
+- [x] 저녁 약속
