[파랑] 5월25일 계획완료

--- a/파랑/5월23일~5월29일.md
+++ b/파랑/5월23일~5월29일.md
@@ -16,7 +16,10 @@
 - [x] 지하철 2단계 요금 조회 기능 구현
 - [x] 저녁 약속
 
-
 ### 5월 25일 (수)
-- [ ] 스프링 스터디 8, 10, 11장 공부
-- [ ] 저녁 회식
+- [x] 스프링 스터디 8, 10, 11장 공부
+- [x] 저녁 회식
+---
+오랜만에 데일리 플래너 조원들이랑 만나서 1차 뽕나무족발, 2차 대포차, 3차 노래방까지 알차게 달리고 왔다.
+이와중에 회식 전에 계획 완료 못 해서 술 마시고 집와서 공부한 나 자신 대단해..
+회식 너무 재밌었고 방학때 제주도 갈 생각에 기대된다ㅎㅎㅎㅎ. 신나신나😆
