--- a/파랑/5월23일~5월29일.md
+++ b/파랑/5월23일~5월29일.md
@@ -1,4 +1,4 @@
-### 5월 23일 계획
+### 5월 23일 (월)
 - [x] 10시 30분 근로 점심 회식
 - [x] 지하철 경로 조회 2단계 경로 조회 기능 구현
 - [x] 20시 필라테스
@@ -11,7 +11,15 @@
 지금 step2 미션도 급한데ㅠㅠ 공개처형 당하고 나니 멘탈이 털려서 키보드가 손에 안 잡혔다. 엄청 유익하긴 했는데 내 멘탈은... 누가 돌려주나?..
 그래도 내 과외 선생님 오리가 옆에서 미션하는 거 계속 봐줘서 경로 조회 기능을 구현할 수 있었다. 파랑 지켜..
 
-### 5월 24일 계획
+### 5월 24일 (화)
 - [x] 학습로그 말하기
 - [x] 지하철 2단계 요금 조회 기능 구현
 - [x] 저녁 약속
+
+### 5월 25일 (수)
+- [x] 스프링 스터디 8, 10, 11장 공부
+- [x] 저녁 회식
+---
+오랜만에 데일리 플래너 조원들이랑 만나서 1차 뽕나무족발, 2차 대포차, 3차 노래방까지 알차게 달리고 왔다.
+이와중에 회식 전에 계획 완료 못 해서 술 마시고 집와서 공부한 나 자신 대단해..
+회식 너무 재밌었고 방학때 제주도 갈 생각에 기대된다ㅎㅎㅎㅎ. 신나신나😆
