--- a/티거/5월23일-5월29일.md
+++ b/티거/5월23일-5월29일.md
@@ -12,3 +12,9 @@
 - [x] 준 면담 사전 메일 전송
 - [x] 커스텀 훅 학습
 - [x] (장바구니 리뷰 오기 전까지만) 페이먼츠 2단계 리뷰 피드백
+
+## 5월 25일 (수)
+
+- [x] 10시 30분 준 면담
+- [x] (드디어🥺) 장바구니 2단계 리뷰 피드백
+- [x] 데일리플래너 회식
