--- a/앨버/5월23일~5월27일.md
+++ b/앨버/5월23일~5월27일.md
@@ -18,3 +18,12 @@
 - [x] 면담
 - [x] 테코톡
 - [x] 회식
+
+## 5월 26일
+
+- [ ] 테코톡 준비
+
+  - [ ] 처음부터 끝까지 대본 써보기
+  - [ ] 모르는 내용 포스트잇에 작성 및 해당 내용 조사
+  - [ ] 예시 코드 작성하기
+- [ ] 페이먼츠 미션 타입스크립트 변환 (2시간)
