[파랑] 5월26일 계획

--- a/파랑/5월23일~5월29일.md
+++ b/파랑/5월23일~5월29일.md
@@ -23,3 +23,9 @@
 오랜만에 데일리 플래너 조원들이랑 만나서 1차 뽕나무족발, 2차 대포차, 3차 노래방까지 알차게 달리고 왔다.
 이와중에 회식 전에 계획 완료 못 해서 술 마시고 집와서 공부한 나 자신 대단해..
 회식 너무 재밌었고 방학때 제주도 갈 생각에 기대된다ㅎㅎㅎㅎ. 신나신나😆
+
+### 5월 26일 (목)
+- [ ] 배포 강의
+- [ ] 코틀린 피드백 정리
+- [ ] 지하철 2단계 피드백 일찍 오면 -> 반영
+- [ ] 21시 필라테스
