[파랑] 5월26일 계획수정

--- a/파랑/5월23일~5월29일.md
+++ b/파랑/5월23일~5월29일.md
@@ -27,5 +27,5 @@
 ### 5월 26일 (목)
 - [ ] 배포 강의
 - [ ] 코틀린 피드백 정리
-- [ ] 지하철 2단계 피드백 일찍 오면 -> 반영
+- [ ] 지하철 2단계 피드백 일찍 오면 -> 반영 / 안 오면 -> 어써머 코틀린 리뷰
 - [ ] 21시 필라테스
