--- a/티거/5월23일-5월29일.md
+++ b/티거/5월23일-5월29일.md
@@ -18,3 +18,9 @@
 - [x] 10시 30분 준 면담
 - [x] (드디어🥺) 장바구니 2단계 리뷰 피드백
 - [x] 데일리플래너 회식
+
+## 5월 26일 (목)
+
+- [ ] 10시 30분 강의 < React & TypeScript >
+- [ ] 장바구니 2단계 리뷰 요청
+- [ ] 페이먼츠 3단계
