--- a/오리/5월23일~5월29일.md
+++ b/오리/5월23일~5월29일.md
@@ -16,3 +16,9 @@
 - [x] 사이드 테이블 설계
 - [x] 사이드 회의
 - [x] 저녁 회식!!!!!
+
+### 5월 26일 (목)
+- [ ] 오전 강의
+- [ ] 사이드 프로젝트 세팅
+- [ ] 사이드 유저관리기능 수정
+- [ ] 장바구니 코드 보기
