[오리] 5월 26일 계획 완료

--- a/오리/5월23일~5월29일.md
+++ b/오리/5월23일~5월29일.md
@@ -18,7 +18,7 @@
 - [x] 저녁 회식!!!!!
 
 ### 5월 26일 (목)
-- [ ] 오전 강의
-- [ ] 사이드 프로젝트 세팅
-- [ ] 사이드 유저관리기능 수정
-- [ ] 장바구니 코드 보기
+- [x] 오전 강의
+- [x] 사이드 프로젝트 세팅
+- [x] 사이드 유저관리기능 수정
+- [x] 장바구니 코드 보기
