--- a/앨버/5월23일~5월27일.md
+++ b/앨버/5월23일~5월27일.md
@@ -18,3 +18,13 @@
 - [x] 면담
 - [x] 테코톡
 - [x] 회식
+
+## 5월 26일
+
+- [x] 테코톡 준비
+
+  - [x] 처음부터 끝까지 대본 써보기
+  - [x] 모르는 내용 포스트잇에 작성 및 해당 내용 조사
+  - [x] 예시 코드 작성하기
+- [x] 페이먼츠 미션 타입스크립트 변환 (2시간)
+- [x] 코드리뷰스터디 과제 1/2
