5월 26일 에덴 계획 완료

--- a/에덴/5월23일-5월29일.md
+++ b/에덴/5월23일-5월29일.md
@@ -21,7 +21,7 @@
 
 ## 5월 26일
 
-- [ ] 알고리즘 스터디
-- [ ] 근로 회의
-- [ ] 제이슨 수업
-- [ ] 수업 들은거 정리
+- [x] 알고리즘 스터디
+- [x] 근로 회의
+- [x] 제이슨 수업
+- [x] 수업 들은거 정리
