[코린] 5월 26일 계획 (#466)
* feat: 코린 5월26일 계획 추가

* feat: 코린 5월26일 계획 수정

* feat: 코린 5월26일 계획 완료

--- a/코린/5월23일-5월29일.md
+++ b/코린/5월23일-5월29일.md
@@ -15,3 +15,9 @@
 - [x] 알고리즘 스터디
 - [x] `스프링5 입문` chapter 7 읽기
 - [x] 스프링 발표 자료 준비하기
+
+## 5월26일
+
+- [x] 알고리즘 스터디
+- [x] 스프링 발표자료 PR
+- [x] 글쓰기 내용 구상
