220526 잉 일정 완료

--- a/잉/5월23일~5월27일.md
+++ b/잉/5월23일~5월27일.md
@@ -15,7 +15,7 @@
 - [x] 저녁약속
 
 ### 5월 26일 (목)
-- [ ] aws 강의
-- [ ] 학습로그 회의
-- [ ] 스프링5 7장 ~8장 
-- [ ] 운동 1시간
+- [x] aws 강의
+- [x] 학습로그 회의
+- [x] 스프링5 7장 ~8장 
+- [x] 운동 1시간
