[민초] 5월 26일 계획 (#467)
* [민초] 5월 26일 계획

* [민초] 5월 26일 완료

--- a/민초/5월23일-5월27일.md
+++ b/민초/5월23일-5월27일.md
@@ -16,8 +16,13 @@
 
 # 5. 25.
 
-- [ ] 리뷰 기다리기
-- [ ] 타입스크립트 공부
-- [ ] LMS 키워드 정리하기
-- [ ] 회식
+- [x] 리뷰 기다리기
+- [x] 타입스크립트 공부
+- [x] LMS 키워드 정리하기
+- [x] 회식
 
+# 5. 26.
+
+- [x] 수업
+- [x] 미션 피드백 반영
+- [x] 테코톡 자막 작업
