[파랑] 5월26일 계획 (#463)
* [파랑] 5월26일 계획

* [파랑] 5월26일 계획수정

* [파랑] 5월26일 계획완료

--- a/파랑/5월23일~5월29일.md
+++ b/파랑/5월23일~5월29일.md
@@ -23,3 +23,14 @@
 오랜만에 데일리 플래너 조원들이랑 만나서 1차 뽕나무족발, 2차 대포차, 3차 노래방까지 알차게 달리고 왔다.
 이와중에 회식 전에 계획 완료 못 해서 술 마시고 집와서 공부한 나 자신 대단해..
 회식 너무 재밌었고 방학때 제주도 갈 생각에 기대된다ㅎㅎㅎㅎ. 신나신나😆
+
+### 5월 26일 (목)
+- [x] 배포 강의
+- [x] 코틀린 피드백 정리
+- [x] 지하철 2단계 피드백 일찍 오면 -> 반영 / 안 오면 -> 어써머 코틀린 리뷰
+- [x] 21시 필라테스
+---
+드디어 작년 학교에서 같은 알고리즘 스터디를 했던 알파랑 찬이랑 (꼽사리 낀 제로랑) 점심을 먹었다. 레벨2 초반부터 밥 먹자 먹자~ 하다가 이런저런 이유로 여러번 파토 났었는데 방학을 2주 남기고 겨우 만났다.
+같은 학교 사람만 만나도 신기한데 같이 알고리즘 스터디를 했던 4명 중 3명이 우테코에 오게 되어서 정말 신기했다. 학교랑 알고리즘 스터디 했을 때 얘기도 하고 즐거운 점심시간이었다.
+저녁엔 기대하던 장바구니 미션 페어가 나왔다. 점심에도 학교 사람들 만났는데 페어도 작년에 같이 학회를 했던 블링이 매칭됐다. 너무 신기해서 바로 카톡해서 서로 잘 해보자고 얘기했다.
+지하철 2단계 피드백이 방금 와서 좀 화나지만 새로운 미션도 파이팅해야지💪
