[파랑] 5월27일 계획

--- a/파랑/5월23일~5월29일.md
+++ b/파랑/5월23일~5월29일.md
@@ -34,3 +34,8 @@
 같은 학교 사람만 만나도 신기한데 같이 알고리즘 스터디를 했던 4명 중 3명이 우테코에 오게 되어서 정말 신기했다. 학교랑 알고리즘 스터디 했을 때 얘기도 하고 즐거운 점심시간이었다.
 저녁엔 기대하던 장바구니 미션 페어가 나왔다. 점심에도 학교 사람들 만났는데 페어도 작년에 같이 학회를 했던 블링이 매칭됐다. 너무 신기해서 바로 카톡해서 서로 잘 해보자고 얘기했다.
 지하철 2단계 피드백이 방금 와서 좀 화나지만 새로운 미션도 파이팅해야지💪
+
+### 5월 27일 (금)
+- [ ] 15시 스프링 스터디
+- [ ] 16시 30분 매트의 아고라
+- [ ] 장바구니 페어
