--- a/아서/5월23일~5월29일.md
+++ b/아서/5월23일~5월29일.md
@@ -29,3 +29,12 @@
 - [x] 배포 수업 듣기
 - [x] 지하철 경로 피드백 정리
 - [x] 글쓰기 초안 작성
+
+
+
+## 5월 27일
+
+- [ ] 인증 with Spring, Spring MVC Config
+- [ ] 인증 공부하기
+- [ ] 페어프로그래밍 시작
+- [ ] 프론트 친구들(시지프, 쟈스민)과 친해지기
