--- a/민초/5월23일-5월27일.md
+++ b/민초/5월23일-5월27일.md
@@ -26,3 +26,11 @@
 - [x] 수업
 - [x] 미션 피드백 반영
 - [x] 테코톡 자막 작업
+
+# 5. 27.
+
+- [ ] 장바구니 협업 미션 소개 수업
+- [ ] 타입스크립트 공부
+- [ ] 장바구니 step2 피드백 오면 반영
+- [ ] 페이먼츠 step3 어떻게 할지 고민 🧐
+
