[티거] 5월 27일 계획

--- a/티거/5월23일-5월29일.md
+++ b/티거/5월23일-5월29일.md
@@ -21,6 +21,11 @@
 
 ## 5월 26일 (목)
 
-- [ ] 10시 30분 강의 < React & TypeScript >
+- [x] 10시 30분 강의 < React & TypeScript >
 - [ ] 장바구니 2단계 리뷰 요청
 - [ ] 페이먼츠 3단계
+
+## 5월 27일 (금)
+
+- [ ] 10시 40분 강의 < 협업 미션 소개 >
+- [ ] 장바구니 2단계 리뷰 요청 🥕
