--- a/민초/5월23일-5월27일.md
+++ b/민초/5월23일-5월27일.md
@@ -30,7 +30,11 @@
 # 5. 27.
 
 - [ ] 장바구니 협업 미션 소개 수업
-- [ ] 타입스크립트 공부
+- [ ] 리액트에 타입스크립트 적용하기 문서 읽기
 - [ ] 장바구니 step2 피드백 오면 반영
 - [ ] 페이먼츠 step3 어떻게 할지 고민 🧐
+  - [ ] TS 적용만 할지?
+  - [ ] NPM 배포까지 해볼지? 고민 해보고
+  - [ ] 토~일 이틀간 step3 진행
+
 
